--- a/data/cards/68250822.yaml
+++ b/data/cards/68250822.yaml
@@ -8,7 +8,7 @@ name:
   it: Incrocio Doppio Spright
   pt: Dupla Traição Spright
   ja: スプライト・ダブルクロス
-  ja_romaji: Supuraito Daburu Kurosu
+  ja_romaji: Supuraito Daburukurosu
   ko:
   ko_rr:
   zh-TW:
