--- a/data/cards/07436169.yaml
+++ b/data/cards/07436169.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Target 1 "Visas Starfrost" you control and 1 Effect Monster your opponent controls; negate that opponent's monster's effects, and if you do, your monster gains ATK equal to half of that opponent's monster's original ATK or DEF (whichever is higher). You can banish this card from your GY; add 1 Spell/Trap that mentions "Visas Starfrost" from your Deck to your hand, except "Trivikarma". You can only use 1 "Trivikarma" effect per turn, and only once that turn.
+    Target 1 "Visas Starfrost" you control and 1 Effect Monster your opponent controls; negate that opponent's monster's effects, and if you do, your monster gains ATK equal to half of that opponent's monster's original ATK or DEF (whichever is higher, your choice if tied). You can banish this card from your GY; add 1 Spell/Trap that mentions "Visas Starfrost" from your Deck to your hand, except "Trivikarma". You can only use 1 "Trivikarma" effect per turn, and only once that turn.
   de:
   es:
   fr:
