--- a/data/cards/39103226.yaml
+++ b/data/cards/39103226.yaml
@@ -8,14 +8,14 @@ name:
   it:
   pt:
   ja: <ruby>台<rt>だい</rt></ruby><ruby>貫<rt>かん</rt></ruby><ruby>計<rt>けい</rt></ruby><ruby>量<rt>りょう</rt></ruby>
-  ja_romaji: Daikan Keiryō
+  ja_romaji: Daikankeiryō
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    If your opponent controls at least 2 more monsters than you do: They must send monsters they control to the GY so they control 1.
+    If your opponent controls at least 2 more monsters than you do: They must send monsters they control to the GY so they control only 1.
   de:
   es:
   fr:
