--- a/data/cards/96239878.yaml
+++ b/data/cards/96239878.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN: 集束之力
+  zh-CN: 集结之力
 text:
   en: |-
     If you Ritual or Fusion Summon using "Blue-Eyes White Dragon" or "Dark Magician": You can target 1 card your opponent controls or in their GY; banish it. You can send this face-up card from the field to the GY, then target 1 Level 7 or higher Normal Monster in your GY; add it to your hand or shuffle it into the Deck. You can only use each effect of "Strength in Unity" once per turn.
@@ -31,9 +31,7 @@ text:
   ko:
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：自己作使用「青眼白龙」或者「黑魔术师」的仪式·融合召唤成功的场合，以对方的场上·墓地1张卡为对象才能发动。那张卡除外。
-    ②：把魔法与陷阱区域的表侧表示的这张卡送去墓地，以自己墓地1只7星以上的通常怪兽为对象才能发动。那只怪兽加入手卡或回到卡组。
+    此卡名的①②效果1回合仅可各使用1次。①：自己使用了"青眼白龙"或"黑魔导"的仪式・融合召唤成功的情况下，以对手场上・墓地的1张卡为对象可以发动。将该卡除外。②：将魔法与陷阱区域的表侧表示的此卡送至墓地，以自己墓地1只等级7以上的通常怪兽为对象可以发动。将该怪兽加入手牌或放回牌组。
 card_type: Spell
 property: Continuous
 sets:
@@ -68,6 +66,11 @@ sets:
     rarities:
     - Millennium Ultra Rare
     - Ultimate Rare
+  zh-CN:
+  - set_number: CL02-SC014
+    set_name: Classic Pack 02
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
