--- a/data/cards/76812113.yaml
+++ b/data/cards/76812113.yaml
@@ -32,7 +32,7 @@ text:
     인간의 몸에 날개가 자라난 몬스터. 아름답고 화려하게 춤을 추며 날카롭게 공격한다.
   zh-TW:
   zh-CN: |-
-    人长出羽毛的魔兽，表演华丽的舞蹈进行快攻。
+    有着人身并长有翅膀的兽。其舞姿优美华丽，其攻击凌厉无比。
 card_type: Monster
 monster_type_line: Winged Beast
 attribute: WIND
@@ -169,8 +169,9 @@ sets:
     set_name: Metal Raiders
     rarities:
     - Common
-  - set_number: BP1-KR145
-    set_name: Beginner's Edition 1
+  zh-CN:
+  - set_number: CL02-SC163
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
