--- a/data/cards/22110647.yaml
+++ b/data/cards/22110647.yaml
@@ -40,7 +40,7 @@ text:
     ①: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 자신 필드에 "환상수기 토큰"(기계족 / 바람 / 레벨 3 / 공 0 / 수 0) 2장을 특수 소환한다. ②: 자신 필드에 토큰이 존재하는 한, 이 카드는 전투 / 효과로는 파괴되지 않는다. ③: 1턴에 1번, 자신 필드의 "환상수기" 몬스터 1장을 릴리스하고, 필드의 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 파괴한다. 이 효과를 발동하는 턴에, 이 카드는 공격할 수 없다.
   zh-TW: |-
     等级7怪兽×2
-    1回合1次，可移除此卡的1个超量素材并发动。特殊召唤2只「幻獸機衍生物」（机械族·风·星3·攻/守0）至我方场上。只要我方场上存在衍生物，此卡不会因战斗以及卡牌效果而破坏。此外，1回合1次，可释放我方场上1只冠有「幻獸機」之名的怪兽并发动。选择场上的1张卡牌并破坏。此效果发动的回合，此卡不可攻击。
+    1回合1次，可移除此卡的1个超量素材并发动。特殊召唤2只「幻獸機衍生物」（机械族・风・星3・攻／守0）至我方场上。只要我方场上存在衍生物，此卡不会因战斗以及卡牌效果而破坏。此外，1回合1次，可释放我方场上1只冠有「幻獸機」之名的怪兽并发动。选择场上的1张卡牌并破坏。此效果发动的回合，此卡不可攻击。
   zh-CN: |-
     7星怪兽×2
     ①：1回合1次，把这张卡1个XYZ素材取除才能发动。在自己场上把2只「幻兽机衍生物」（机械族·风·3星·攻/守0）特殊召唤。②：只要自己场上有衍生物存在，这张卡不会被战斗·效果破坏。③：1回合1次，把自己场上1只「幻兽机」怪兽解放，以场上1张卡为对象才能发动。那张卡破坏。这个效果发动的回合，这张卡不能攻击。
