--- a/data/cards/30811116.yaml
+++ b/data/cards/30811116.yaml
@@ -31,7 +31,7 @@ text:
   ko: |-
     이 카드가 상대 라이프에 전투 데미지를 주었을 때, "환수기 토큰"(기계족 / 바람속성 / 레벨 3 / 공격력 0 / 수비력 0) 1장을 특수 소환한다. 이 카드의 레벨은 자신 필드 위의 "환상수기 토큰" 레벨의 합계만큼 올린다. 자신 필드 위에 토큰이 존재하는 한, 이 카드는 전투 및 효과로는 파괴되지 않는다. 또한, 1턴에 1번, 토큰 1장을 릴리스하고 발동할 수 있다. 필드 위의 마법 / 함정 카드 1장을 선택하고 파괴한다.
   zh-TW: |-
-    此卡给予对手生命战斗伤害时，特殊召唤1只「幻獸機衍生物」（机械族·风·星3·攻/守0）。此卡的等级上升相当于我方场上的「幻獸機衍生物」的等级的合计值。只要我方场上存在衍生物，此卡不会因战斗以及卡牌效果被破坏。此外，1回合1次，可释放1只衍生物并发动。选择场上的1张魔法、陷阱卡并破坏。
+    此卡给予对手生命战斗伤害时，特殊召唤1只「幻獸機衍生物」（机械族・风・星3・攻／守0）。此卡的等级上升相当于我方场上的「幻獸機衍生物」的等级的合计值。只要我方场上存在衍生物，此卡不会因战斗以及卡牌效果被破坏。此外，1回合1次，可释放1只衍生物并发动。选择场上的1张魔法、陷阱卡并破坏。
   zh-CN: |-
     这张卡给与对方基本分战斗伤害时，把1只「幻兽机衍生物」（机械族·风·3星·攻/守0）特殊召唤。这张卡的等级上升自己场上的「幻兽机衍生物」的等级的合计数值。只要自己场上有衍生物存在，这张卡不会被战斗以及效果破坏。此外，1回合1次，把1只衍生物解放才能发动。选择场上1张魔法·陷阱卡破坏。
 card_type: Monster
