--- a/data/cards/67922702.yaml
+++ b/data/cards/67922702.yaml
@@ -12,7 +12,7 @@ name:
   ko: 환상수기 테더울프
   ko_rr:
   zh-TW: 幻獸機栓繩飛狼
-  zh-CN: 幻兽机 绳狼
+  zh-CN: 幻兽机 拴绳飞狼
 text:
   en: |-
     If this card is Normal Summoned: Special Summon 1 "Mecha Phantom Beast Token" (Machine/WIND/Level 3/ATK 0/DEF 0). This card's Level is increased by the total Levels of all "Mecha Phantom Beast Tokens" you control. While you control a Token, this card cannot be destroyed by battle or card effects. Once per battle, during the Damage Step, when this card battles an opponent's monster (Quick Effect): You can Tribute 1 Token; this card gains 800 ATK, until the end of this turn.
@@ -31,9 +31,9 @@ text:
   ko: |-
     ① : 이 카드가 일반 소한에 성공했을 경우에 발동한다. 자신 필드에 "환상수기 토큰" (기계족 / 바람 / 레벨 3 / 공 0 / 수 0) 1장을 특수 소환한다. ② : 이 카드의 레벨은 자신 필드의 "환상수기 토큰" 의 레벨 합계만큼만 올라간다. ③ : 자신 필드에 토큰이 존재하는 한, 이 카드는 전투 / 효과로는 파괴되지 않는다. ④ : 이 카드가 상대 몬스터와 전투를 실행하는 데미지 스텝 개시시부터 데미지 계산 전까지 1번, 자신 필드의 토큰 1장을 릴리스하고 발동할 수 있다. 이 카드의 공격력은 턴 종료시까지 800 올린다.
   zh-TW: |-
-    此卡召唤成功时，特殊召唤1只「幻獸機衍生物」（机械族·风·星3·攻/守0）。此卡的等级上升相当于我方场上的「幻獸機衍生物」的等级的合计值。只要我方场上存在衍生物，此卡不会因战斗以及卡牌效果被破坏。此外，此卡与对手怪兽进行战斗的伤害步骤时，仅1次可释放1只衍生物并发动。此卡的攻击力直至回合结束时上升800点。
+    此卡召唤成功时，特殊召唤1只「幻獸機衍生物」（机械族・风・星3・攻／守0）。此卡的等级上升相当于我方场上的「幻獸機衍生物」的等级的合计值。只要我方场上存在衍生物，此卡不会因战斗以及卡牌效果被破坏。此外，此卡与对手怪兽进行战斗的伤害步骤时，仅1次可释放1只衍生物并发动。此卡的攻击力直至回合结束时上升800点。
   zh-CN: |-
-    ①：这张卡召唤成功的场合发动。在自己场上把1只「幻兽机衍生物」（机械族·风·3星·攻/守0）特殊召唤。②：这张卡的等级上升自己场上的「幻兽机衍生物」的等级的合计数值。③：只要自己场上有衍生物存在，这张卡不会被战斗·效果破坏。④：这张卡和对方怪兽进行战斗的从伤害步骤开始时到伤害计算前1次，把自己场上1只衍生物解放才能发动。这张卡的攻击力直到回合结束时上升800。
+    ①：此卡召唤成功的情况下发动。将1只"幻兽机衍生物"（机械族・风・星3・攻／守0）特殊召唤至自己场上。②：此卡的等级上升相当于自己场上"幻兽机衍生物"等级合计的数值。③：只要自己场上有衍生物存在，此卡不会因战斗・效果被破坏。④：此卡与对手怪兽进行战斗的伤害步骤开始时至伤害计算前为止有1次，解放自己场上的1只衍生物可以发动。此卡的攻击力直至回合结束时为止上升800。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: WIND
@@ -156,6 +156,11 @@ sets:
     set_name: Lord of the Tachyon Galaxy
     rarities:
     - Rare
+  zh-CN:
+  - set_number: TM01-SC068
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
