--- a/data/cards/70875955.yaml
+++ b/data/cards/70875955.yaml
@@ -31,7 +31,7 @@ text:
   ko: |-
     이 카드의 컨트롤러는, 서로의 엔드 페이즈마다 자신 필드의 토큰 또는 "환상수기" 몬스터 1장을 릴리스한다. 또는, 어느 쪽도 릴리스하지 않고 이 카드를 묘지로 보낸다. ①: 1턴에 1번, 발동할 수 있다. 자신 필드에 "환상수기 토큰"(기계족 / 바람 / 레벨 3 / 공 0 / 수 0) 1장을 특수 소환한다.
   zh-TW: |-
-    1回合1次，可特殊召唤1只「幻獸機衍生物」（机械族·风·星3·攻/守0）至我方场上。此卡的控制者每次双方的结束阶段，释放我方场上的1只衍生物或冠有「幻獸機」之名的怪兽。或者两者均不释放将此卡送入墓地。
+    1回合1次，可特殊召唤1只「幻獸機衍生物」（机械族・风・星3・攻／守0）至我方场上。此卡的控制者每次双方的结束阶段，释放我方场上的1只衍生物或冠有「幻獸機」之名的怪兽。或者两者均不释放将此卡送入墓地。
   zh-CN: |-
     这张卡的控制者在每次双方的结束阶段把自己场上1只衍生物或者「幻兽机」怪兽解放。或者都不解放让这张卡送去墓地。①：1回合1次，可以发动。在自己场上把1只「幻兽机衍生物」（机械族·风·3星·攻/守0）特殊召唤。
 card_type: Trap
