--- a/data/cards/02857636.yaml
+++ b/data/cards/02857636.yaml
@@ -136,6 +136,12 @@ sets:
     set_name: Secret Shiny Box
     rarities:
     - Normal Parallel Rare
+  - set_number: SLF1-JP093
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: FLOD-KR046
     set_name: Flames of Destruction
