--- a/data/cards/03814632.yaml
+++ b/data/cards/03814632.yaml
@@ -107,6 +107,12 @@ sets:
     set_name: Tournament Pack 2018 Vol.2
     rarities:
     - Common
+  - set_number: SLF1-JP090
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: CPZ1-KR037
     set_name: 'Collectors Pack: ZEXAL Version'
