--- a/data/cards/94973028.yaml
+++ b/data/cards/94973028.yaml
@@ -12,7 +12,7 @@ name:
   ko: 환상수기 콜트윙
   ko_rr: Hwansangsugi Kolteuwing
   zh-TW:
-  zh-CN: 幻兽机 倾转翼马
+  zh-CN: 幻兽机 倾翼小马
 text:
   en: |-
     If this card is Special Summoned: Special Summon 2 "Mecha Phantom Beast Tokens" (Machine/WIND/Level 3/ATK 0/DEF 0). You must control another "Mecha Phantom Beast" monster to activate and to resolve this effect. This card's Level is increased by the total Levels of all "Mecha Phantom Beast Tokens" you control. While you control a Token, this card cannot be destroyed by battle or card effects. Once per turn: You can Tribute 2 Tokens, then target 1 card your opponent controls; destroy that target, and if you do, banish it.
@@ -32,7 +32,7 @@ text:
     ①: 자신 필드에 다른 "환상수기" 몬스터가 존재하고, 이 카드가 특수 소환에 성공했을 경우에 발동한다. 자신 필드에 "환상수기 토큰"(기계족 / 바람 / 레벨 3 / 공 0 / 수 0) 2장을 특수 소환한다. ②: 이 카드의 레벨은 자신 필드의 "환상수기 토큰"의 레벨의 합계만큼만 올라간다. ③: 자신 필드에 토큰이 존재하는 한, 이 카드는 전투 / 효과로는 파괴되지 않는다. ④: 1턴에 1번, 자신 필드의 토큰 2장을 릴리스하고, 상대 필드의 카드 1장을 대상으로 하여 발동할 수 있다. 그 상대의 카드를 파괴하고 제외한다.
   zh-TW:
   zh-CN: |-
-    ①：自己场上有其他「幻兽机」怪兽存在，这张卡特殊召唤成功的场合发动。在自己场上把2只「幻兽机衍生物」（机械族·风·3星·攻/守0）特殊召唤。②：这张卡的等级上升自己场上的「幻兽机衍生物」的等级的合计数值。③：只要自己场上有衍生物存在，这张卡不会被战斗·效果破坏。④：1回合1次，把自己场上2只衍生物解放，以对方场上1张卡为对象才能发动。那张对方的卡破坏并除外。
+    ①：自己场上有其他"幻兽机"怪兽存在、此卡特殊召唤成功的情况下发动。将2只"幻兽机衍生物"（机械族・风・星3・攻／守0）特殊召唤至自己场上。②：此卡的等级上升相当于自己场上"幻兽机衍生物"等级合计的数值。③：只要自己场上有衍生物存在，此卡不会因战斗・效果被破坏。④：1回合1次，解放自己场上的2只衍生物，以对手场上的1张卡为对象可以发动。将该对手的卡破坏并除外。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: WIND
@@ -144,6 +144,11 @@ sets:
     - Common
   - set_number: LVP3-KR053
     set_name: LINK VRAINS Pack 3
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: TM01-SC069
+    set_name: 'Theme Pack: War of Infinite Machine'
     rarities:
     - Common
 limit_regulation:
