--- a/data/cards/77778835.yaml
+++ b/data/cards/77778835.yaml
@@ -12,7 +12,7 @@ name:
   ko: 히스테릭 파티
   ko_rr:
   zh-TW:
-  zh-CN: 歇斯底里的舞会
+  zh-CN: 歇斯底里的派对
 text:
   en: |-
     Activate this card by discarding 1 card; Special Summon as many copies of "Harpie Lady" as possible from your GY. When this face-up card leaves the field, destroy those monsters.
@@ -32,7 +32,7 @@ text:
     ①: 패를 1장 버리고 이 카드를 발동할 수 있다. 자신의 묘지에서 "해피 레이디"를 가능한 한 특수 소환한다. 이 카드가 필드에서 벗어났을 때에 이 효과로 특수 소환한 몬스터는 전부 파괴된다.
   zh-TW:
   zh-CN: |-
-    ①：丢弃1张手卡才能把这张卡发动。从自己墓地把「鹰身女郎」尽可能特殊召唤。这张卡从场上离开时这个效果特殊召唤的怪兽全部破坏。
+    ①：舍弃1张手牌可以发动此卡。从自己的墓地尽可能地将"神鹰女郎"特殊召唤。此卡离开场上时，以此效果特殊召唤的怪兽将被全部破坏。
 card_type: Trap
 property: Continuous
 sets:
@@ -161,6 +161,11 @@ sets:
     - Super Rare
   - set_number: DP16-KR038
     set_name: 'Duelist Pack: Battle City'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC170
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
