--- a/data/cards/13629812.yaml
+++ b/data/cards/13629812.yaml
@@ -58,6 +58,11 @@ sets:
     set_name: Return of the Duelist
     rarities:
     - Common
+  pt:
+  - set_number: OP20-PT038
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   ja:
   - set_number: EP13-JP020
     set_name: 'Extra Pack: Sword of Knights'
