--- a/data/cards/14568951.yaml
+++ b/data/cards/14568951.yaml
@@ -63,6 +63,11 @@ sets:
     set_name: Return of the Duelist
     rarities:
     - Super Rare
+  pt:
+  - set_number: OP20-PT030
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   ja:
   - set_number: EP13-JP014
     set_name: 'Extra Pack: Sword of Knights'
