--- a/data/cards/40279770.yaml
+++ b/data/cards/40279770.yaml
@@ -56,6 +56,11 @@ sets:
     set_name: 'Duelist Pack: Crow'
     rarities:
     - Super Rare
+  pt:
+  - set_number: OP20-PT037
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   ja:
   - set_number: DP11-JP029
     set_name: 'Duelist Pack: Crow'
