--- a/data/cards/89628781.yaml
+++ b/data/cards/89628781.yaml
@@ -91,6 +91,10 @@ sets:
     set_name: Soul of the Duelist
     rarities:
     - Short Print
+  - set_number: OP20-PT033
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   ja:
   - set_number: SOD-JP052
     set_name: Soul of the Duelist
