--- a/data/cards/43906884.yaml
+++ b/data/cards/43906884.yaml
@@ -58,6 +58,11 @@ sets:
     set_name: Starstrike Blast
     rarities:
     - Common
+  pt:
+  - set_number: OP20-PT036
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   ja:
   - set_number: STBL-JP068
     set_name: Starstrike Blast
