--- a/data/cards/51670553.yaml
+++ b/data/cards/51670553.yaml
@@ -8,7 +8,7 @@ name:
   it: Spada di Bambù Divora Anime
   pt: Espada Bambu Devoradora de Almas
   ja: <ruby>魂<rt>たましい</rt></ruby>を<ruby>吸<rt>す</rt></ruby>う<ruby>竹<rt>たけ</rt></ruby><ruby>光<rt>みつ</rt></ruby>
-  ja_romaji: Tamashī o Su-u Takemitsu
+  ja_romaji: Tamashī o Sū Takemitsu
   ko: 혼을 흡수하는 죽도
   ko_rr:
   zh-TW:
@@ -56,6 +56,11 @@ sets:
   it:
   - set_number: GLAS-IT060
     set_name: Gladiator's Assault
+    rarities:
+    - Common
+  pt:
+  - set_number: OP20-PT031
+    set_name: OTS Tournament Pack 20
     rarities:
     - Common
   ja:
