--- a/data/cards/52833089.yaml
+++ b/data/cards/52833089.yaml
@@ -72,6 +72,11 @@ sets:
     set_name: 'Duelist Pack: Crow'
     rarities:
     - Common
+  pt:
+  - set_number: OP20-PT035
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   ja:
   - set_number: TSHD-JP066
     set_name: The Shining Darkness
