--- a/data/cards/64952266.yaml
+++ b/data/cards/64952266.yaml
@@ -72,6 +72,11 @@ sets:
     set_name: 'Duelist Pack: Crow'
     rarities:
     - Common
+  pt:
+  - set_number: OP20-PT032
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   ja:
   - set_number: RGBT-JP050
     set_name: Raging Battle
