--- a/data/cards/kdb18031.yaml
+++ b/data/cards/kdb18031.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18031
 password:
 name:
   en: Zalamander Catalyzer
@@ -63,6 +63,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 904373
