--- a/data/cards/kdb18036.yaml
+++ b/data/cards/kdb18036.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18036
 password:
 name:
   en: Ixeep, Omen of the Ghoti
@@ -60,6 +60,6 @@ sets:
     set_name: Darkwing Blast
     rarities:
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 903672
