--- a/data/cards/04472318.yaml
+++ b/data/cards/04472318.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18030
 password: 4472318
 name:
   en: Bayerock Dragon
@@ -63,6 +63,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 904370
