--- a/data/cards/09603252.yaml
+++ b/data/cards/09603252.yaml
@@ -1,7 +1,7 @@
 konami_id: 17037
 password: 9603252
 name:
-  en: Witchcrafter Vice-Master
+  en: Witchcrafter Vice-Madame
   de:
   es:
   fr:
@@ -16,11 +16,10 @@ name:
 text:
   en: |-
     1 "Witchcrafter" monster + 1 Spellcaster monster
-    When a non-Fusion Spellcaster monster's effect OR a Spell Card or effect is activated (Quick Effect): You can activate 1 of these effects;
+    When a Spell Card or effect, or a non-Fusion Spellcaster monster effect, is activated (Quick Effect): You can activate 1 of these effects (but you can only use each effect of "Witchcrafter Vice-Madame" once per turn).
     ● Destroy 1 card on the field.
     ● Special Summon 1 Level 6 or lower "Witchcrafter" monster from your hand or Deck.
     ● Add 1 "Witchcrafter" Spell/Trap from your GY to your hand.
-    You can only use each effect of "Witchcrafter Vice-Master" once per turn.
   de:
   es:
   fr:
@@ -49,6 +48,31 @@ materials: 1 "Witchcrafter" monster + 1 Spellcaster-Type monster
 series:
 - Witchcrafter
 sets:
+  en:
+  - set_number: MAMA-EN020
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: MAMA-DE020
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: MAMA-FR020
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: MAMA-IT020
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: MAMA-PT020
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SSB1-JP005
     set_name: Secret Shiny Box
