--- a/data/cards/25209168.yaml
+++ b/data/cards/25209168.yaml
@@ -1,7 +1,7 @@
 konami_id: 17608
 password: 25209168
 name:
-  en: Exchange of the Heart
+  en: Exchange of Despair and Hope
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 绝望与希望的逆转
 text:
   en: |-
-    If you control 3 or more EARTH Fairy monsters: Send as many monsters on the field as possible to the GY, then each player can Special Summon to their field a number of monsters from their opponent's GY, up to the number of monsters that were sent to their opponent's GY by this effect, then, if "Exchange of the Spirit" is in your GY, you can Set 1 Trap directly from your Deck. It can be activated this turn. You can only activate 1 "Exchange of the Heart" per turn.
+    If you control 3 or more EARTH Fairy monsters: Send as many monsters from the field to the GY as possible (min. 1), then each player can Special Summon monsters from their opponent's GY to their own field, up to the number of monsters sent to their opponent's GY by this effect, then, if a monster was Special Summoned by this effect and "Exchange of the Spirit" is in your GY, you can Set 1 Trap directly from your Deck. It can be activated this turn. You can only activate 1 "Exchange of Despair and Hope" per turn.
   de:
   es:
   fr:
@@ -33,6 +33,31 @@ property: Normal
 series:
 - Exchange of the Spirit
 sets:
+  en:
+  - set_number: MAMA-EN030
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: MAMA-DE030
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: MAMA-FR030
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: MAMA-IT030
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: MAMA-PT030
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP27-JP026
     set_name: 'Duelist Pack: Duelists of Pyroxene'
