--- a/data/cards/25926710.yaml
+++ b/data/cards/25926710.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 古尖兵 凯尔柏克
 text:
   en: |-
-    If a card(s) is sent from the hand and/or Deck to your opponent's GY (except during the Damage Step): You can target 1 opponent's Special Summoned monster; Special Summon this card from your hand, then return the targeted monster to the hand. If this card is sent from the hand or Deck to the GY: You can send the top 5 cards of each player's Deck to the GY, then, if "Exchange of the Spirit" is in your GY, you can Set 1 Trap from your GY. You can only use each effect of "Kelbek the Ancient Vanguard" once per turn.
+    If a card(s) is sent from the hand or Deck to your opponent's GY (except during the Damage Step): You can target 1 Special Summoned monster your opponent controls; Special Summon this card from your hand, then return that monster to the hand. If this card is sent from the hand or Deck to the GY: You can activate this effect; each player sends the top 5 cards of their Deck to the GY (or their entire Deck, if less than 5), then, if "Exchange of the Spirit" is in your GY, you can Set 1 Trap from your GY. You can only use each effect of "Kelbek the Ancient Vanguard" once per turn.
   de:
   es:
   fr:
@@ -37,6 +37,31 @@ def: 1800
 series:
 - Exchange of the Spirit
 sets:
+  en:
+  - set_number: MAMA-EN027
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: MAMA-DE027
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: MAMA-FR027
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: MAMA-IT027
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: MAMA-PT027
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP27-JP023
     set_name: 'Duelist Pack: Duelists of Pyroxene'
