--- a/data/cards/33331231.yaml
+++ b/data/cards/33331231.yaml
@@ -1,7 +1,7 @@
 konami_id: 17033
 password: 33331231
 name:
-  en: Strategic Striker - H.A.M.P.
+  en: Surgical Striker - H.A.M.P.
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as a "Sky Striker" card.)
-    If you control a "Sky Striker Ace" monster, you can Special Summon this card (from your hand) to either field by Tributing 1 monster on that field. You can only Special Summon "Strategic Striker - H.A.M.P." once per turn this way. When this card is destroyed by battle: You can target 1 card your opponent controls; destroy it.
+    If you control a "Sky Striker Ace" monster, you can Special Summon this card (from your hand) to either field by Tributing 1 monster from that field. You can only Special Summon "Surgical Striker - H.A.M.P." once per turn this way. When this card is destroyed by battle: You can target 1 card your opponent controls; destroy it.
   de:
   es:
   fr:
@@ -40,6 +40,31 @@ def: 2500
 series:
 - Sky Striker
 sets:
+  en:
+  - set_number: MAMA-EN001
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: MAMA-DE001
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: MAMA-FR001
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: MAMA-IT001
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: MAMA-PT001
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SSB1-JPS01
     set_name: Secret Shiny Box
