--- a/data/cards/35098357.yaml
+++ b/data/cards/35098357.yaml
@@ -1,7 +1,7 @@
 konami_id: 17038
 password: 35098357
 name:
-  en: Witchcrafter Confusion
+  en: Witchcrafter Confusion Confession
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 魔女术混乱融合
 text:
   en: |-
-    Fusion Summon 1 Fusion Monster from your Extra Deck, using monsters from your hand or field as Fusion Material, including at least 1 "Witchcrafter" monster. During your End Phase, if you control a "Witchcrafter" monster, while this card is in your GY: You can add this card to your hand. You can only use 1 "Witchcrafter Confusion" effect per turn, and only once that turn.
+    Fusion Summon 1 Fusion Monster from your Extra Deck, using monsters from your hand or field as material, including a "Witchcrafter" monster. During your End Phase, if you control a "Witchcrafter" monster while this card is in your GY: You can add this card to your hand. You can only use 1 "Witchcrafter Confusion Confession" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -36,6 +36,31 @@ series:
 - Fusion
 - Witchcrafter
 sets:
+  en:
+  - set_number: MAMA-EN021
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: MAMA-DE021
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: MAMA-FR021
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: MAMA-IT021
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: MAMA-PT021
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SSB1-JP006
     set_name: Secret Shiny Box
