--- a/data/cards/36114945.yaml
+++ b/data/cards/36114945.yaml
@@ -47,6 +47,31 @@ materials: 2+ Zombie monsters
 series:
 - Mayakashi
 sets:
+  en:
+  - set_number: MAMA-EN014
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: MAMA-DE014
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: MAMA-FR014
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: MAMA-IT014
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: MAMA-PT014
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SSB1-JPS03
     set_name: Secret Shiny Box
