--- a/data/cards/51208877.yaml
+++ b/data/cards/51208877.yaml
@@ -1,7 +1,7 @@
 konami_id: 17609
 password: 51208877
 name:
-  en: Blast Held by Fate
+  en: Blast Held by Destiny
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 命运怀抱的炸弹
 text:
   en: |-
-    When an opponent's monster declares an attack: Destroy the 1 monster your opponent controls with the highest ATK (your choice, if tied), and if you do, inflict damage to your opponent equal to the destroyed monster's original ATK, then, if "Exchange of the Spirit" is not in your GY, you take damage equal to the damage your opponent took. If this card is sent from the hand or Deck to the GY: You can target 1 Level 4 EARTH Fairy monster in your GY; add it to your hand. You can only use each effect of "Blast Held by Fate" once per turn.
+    When an opponent's monster declares an attack: Destroy the 1 monster your opponent controls with the highest ATK (your choice, if tied), and if you do, inflict damage to your opponent equal to its original ATK, then if "Exchange of the Spirit" is not in your GY, you take damage equal to the damage they took. If this card is sent from the hand or Deck to the GY: You can target 1 Level 4 EARTH Fairy monster in your GY; add it to your hand. You can only use each effect of "Blast Held by Destiny" once per turn.
   de:
   es:
   fr:
@@ -33,6 +33,31 @@ property: Normal
 series:
 - Exchange of the Spirit
 sets:
+  en:
+  - set_number: MAMA-EN031
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: MAMA-DE031
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: MAMA-FR031
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: MAMA-IT031
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: MAMA-PT031
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP27-JP027
     set_name: 'Duelist Pack: Duelists of Pyroxene'
