--- a/data/cards/62219643.yaml
+++ b/data/cards/62219643.yaml
@@ -37,27 +37,27 @@ series:
 - Shiranui
 sets:
   en:
-  - set_number: MAMA-EN???
+  - set_number: MAMA-EN015
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   de:
-  - set_number: MAMA-DE???
+  - set_number: MAMA-DE015
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   fr:
-  - set_number: MAMA-FR???
+  - set_number: MAMA-FR015
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   it:
-  - set_number: MAMA-IT???
+  - set_number: MAMA-IT015
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   pt:
-  - set_number: MAMA-PT???
+  - set_number: MAMA-PT015
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
