--- a/data/cards/63542003.yaml
+++ b/data/cards/63542003.yaml
@@ -1,7 +1,7 @@
 konami_id: 17603
 password: 63542003
 name:
-  en: Keldo the Possessed Statue
+  en: Keldo the Sacred Protector
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 宿神像 凯尔多
 text:
   en: |-
-    You can discard 1 other EARTH Fairy monster; Special Summon this card from your hand, then add 1 "Exchange of the Spirit" or 1 card that mentions it from your Deck to your hand. (Quick Effect): You can banish this card from your field or GY, then target up to 5 cards in any GY(s); shuffle them into the Deck. If "Exchange of the Spirit" is not on your field or in your GY at activation, you can only target up to 3 cards. You can only use each effect of "Keldo the Possessed Statue" once per turn.
+    You can discard 1 other EARTH Fairy monster; Special Summon this card from your hand, then add 1 "Exchange of the Spirit" or 1 card that mentions it from your Deck to your hand. (Quick Effect): You can banish this card from your field or GY, then target up to 3 cards in any GY(s), or up to 5 if "Exchange of the Spirit" is on your field or in your GY; shuffle them into the Deck. You can only use each effect of "Keldo the Sacred Protector" once per turn.
   de:
   es:
   fr:
@@ -37,6 +37,31 @@ def: 1600
 series:
 - Exchange of the Spirit
 sets:
+  en:
+  - set_number: MAMA-EN025
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: MAMA-DE025
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: MAMA-FR025
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: MAMA-IT025
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: MAMA-PT025
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP27-JP021
     set_name: 'Duelist Pack: Duelists of Pyroxene'
@@ -51,5 +76,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Limited
+  ocg: Unlimited
 yugipedia_page_id: 870246
