--- a/data/cards/77855162.yaml
+++ b/data/cards/77855162.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18032
 password: 77855162
 name:
   en: Tilting Entrainment
@@ -70,6 +70,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 904367
