--- a/data/cards/96084564.yaml
+++ b/data/cards/96084564.yaml
@@ -36,6 +36,31 @@ def: 0
 series:
 - Sky Striker
 sets:
+  en:
+  - set_number: MAMA-EN002
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: MAMA-DE002
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: MAMA-FR002
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: MAMA-IT002
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: MAMA-PT002
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: VJMP-JP217
     set_name: V Jump June 2022 promotional card
