--- a/data/cards/98715423.yaml
+++ b/data/cards/98715423.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 守墓的陷阱
 text:
   en: |-
-    While "Exchange of the Spirit" is in your GY, your opponent cannot activate the effects of cards in the GY, or Special Summon monsters from the GY. You can only use each of the following effects of "Gravekeeper's Trap" once per turn. During the Main Phase: You can discard 1 card; add 1 "Gravekeeper's" or EARTH Fairy monster from your Deck to your hand. During your opponent's Draw Phase, before their normal draw, if this card is already face-up on the field: Declare 1 card name; look at the card(s) drawn for their normal draw, and if it is the declared card, send it to the GY.
+    While "Exchange of the Spirit" is in your GY, your opponent cannot activate the effects of cards in the GY, or Special Summon monsters from the GY. You can only use each of the following effects of "Gravekeeper's Trap" once per turn. During the Main Phase: You can discard 1 card; add 1 "Gravekeeper's" or EARTH Fairy monster from your Deck to your hand. During your opponent's Draw Phase, before their normal draw, if this card is already face-up on the field: Declare 1 card name; look at the card(s) drawn for their normal draw, and if it was the declared card, send it to the GY.
   de:
   es:
   fr:
@@ -35,27 +35,27 @@ series:
 - Exchange of the Spirit
 sets:
   en:
-  - set_number: MAMA-EN???
+  - set_number: MAMA-EN029
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   de:
-  - set_number: MAMA-DE???
+  - set_number: MAMA-DE029
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   fr:
-  - set_number: MAMA-FR???
+  - set_number: MAMA-FR029
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   it:
-  - set_number: MAMA-IT???
+  - set_number: MAMA-IT029
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   pt:
-  - set_number: MAMA-PT???
+  - set_number: MAMA-PT029
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
