--- a/data/cards/99937011.yaml
+++ b/data/cards/99937011.yaml
@@ -1,7 +1,7 @@
 konami_id: 17604
 password: 99937011
 name:
-  en: Mudora the Cestus Oracle
+  en: Mudora the Sword Oracle
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 剑神官 姆多拉
 text:
   en: |-
-    You can discard 1 other EARTH Fairy monster; Special Summon this card from your hand, then you can place 1 "Gravekeeper's Trap" from your Deck face-up in your Spell & Trap Zone. (Quick Effect): You can banish this card from your field or GY, then target up to 5 cards in any GY(s); shuffle them into the Deck. If "Exchange of the Spirit" is not on your field or in your GY at activation, you can only target up to 3 cards. You can only use each effect of "Mudora the Cestus Oracle" once per turn.
+    You can discard 1 other EARTH Fairy monster; Special Summon this card from your hand, then you can place 1 "Gravekeeper's Trap" from your Deck face-up in your Spell & Trap Zone. (Quick Effect): You can banish this card from your field or GY, then target up to 3 cards in any GY(s), or up to 5 if "Exchange of the Spirit" is on your field or in your GY; shuffle them into the Deck. You can only use each effect of "Mudora the Sword Oracle" once per turn.
   de:
   es:
   fr:
@@ -37,6 +37,31 @@ def: 1800
 series:
 - Exchange of the Spirit
 sets:
+  en:
+  - set_number: MAMA-EN026
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: MAMA-DE026
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: MAMA-FR026
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: MAMA-IT026
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: MAMA-PT026
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP27-JP022
     set_name: 'Duelist Pack: Duelists of Pyroxene'
