--- a/data/cards/kdb18035.yaml
+++ b/data/cards/kdb18035.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18035
 password:
 name:
   en: Zep, Ruby of the Ghoti
@@ -65,6 +65,6 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 903674
