--- a/data/cards/kdb18037.yaml
+++ b/data/cards/kdb18037.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18037
 password:
 name:
   en: Snopios, Shade of the Ghoti
@@ -60,6 +60,6 @@ sets:
     set_name: Darkwing Blast
     rarities:
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 903673
