--- a/data/cards/kdb18038.yaml
+++ b/data/cards/kdb18038.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18038
 password:
 name:
   en: Arionpos, Serpent of the Ghoti
@@ -72,6 +72,6 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 903675
