--- a/data/cards/kdb18039.yaml
+++ b/data/cards/kdb18039.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18039
 password:
 name:
   en: Guoglim, Spear of the Ghoti
@@ -72,6 +72,6 @@ sets:
     rarities:
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 903676
