--- a/data/cards/kdb18041.yaml
+++ b/data/cards/kdb18041.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18041
 password:
 name:
   en: Ghoti Fury
@@ -56,6 +56,6 @@ sets:
     set_name: Darkwing Blast
     rarities:
 limit_regulation:
-  tcg: Not yet released
-  ocg:
+  tcg: Unlimited
+  ocg: Not yet released
 yugipedia_page_id: 903678
