--- a/data/cards/63166095.yaml
+++ b/data/cards/63166095.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: MAMA-EN009
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DASA-DE030
     set_name: Dark Saviors
@@ -62,6 +66,10 @@ sets:
     - Secret Rare
   - set_number: MP19-DE260
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-DE009
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   fr:
@@ -77,6 +85,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: MAMA-FR009
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DASA-IT030
     set_name: Dark Saviors
@@ -90,6 +102,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: MAMA-IT009
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DASA-PT030
     set_name: Dark Saviors
@@ -101,6 +117,10 @@ sets:
     - Secret Rare
   - set_number: MP19-PT260
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-PT009
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   ja:
