--- a/data/cards/72498838.yaml
+++ b/data/cards/72498838.yaml
@@ -73,30 +73,50 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MAMA-EN058
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: GEIM-DE003
     set_name: Genesis Impact
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MAMA-DE058
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: GEIM-FR003
     set_name: Genesis Impact
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MAMA-FR058
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: GEIM-IT003
     set_name: Genesis Impact
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MAMA-IT058
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: GEIM-PT003
     set_name: Genesis Impact
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MAMA-PT058
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBGI-JP003
     set_name: 'Deck Build Pack: Genesis Impactors'
