--- a/data/cards/84523092.yaml
+++ b/data/cards/84523092.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-EN022
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: INCH-DE018
     set_name: The Infinity Chasers
@@ -60,6 +64,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-DE022
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: INCH-FR018
     set_name: The Infinity Chasers
@@ -69,6 +77,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-FR022
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: INCH-IT018
     set_name: The Infinity Chasers
@@ -78,6 +90,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-IT022
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: INCH-PT018
     set_name: The Infinity Chasers
@@ -87,6 +103,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-PT022
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBIC-JP018
     set_name: 'Deck Build Pack: Infinity Chasers'
