--- a/data/cards/96633955.yaml
+++ b/data/cards/96633955.yaml
@@ -57,9 +57,17 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MAMA-EN039
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BODE-DE042
     set_name: Burst of Destiny
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-DE039
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   fr:
@@ -67,14 +75,26 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MAMA-FR039
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BODE-IT042
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MAMA-IT039
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BODE-PT042
     set_name: Burst of Destiny
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-PT039
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   ja:
