--- a/data/cards/02364438.yaml
+++ b/data/cards/02364438.yaml
@@ -44,26 +44,46 @@ sets:
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-EN019
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: HISU-DE038
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-DE019
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: HISU-FR038
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-FR019
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: HISU-IT038
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-IT019
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: HISU-PT038
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-PT019
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBHS-JP038
     set_name: 'Deck Build Pack: Hidden Summoners'
