--- a/data/cards/03078576.yaml
+++ b/data/cards/03078576.yaml
@@ -52,6 +52,10 @@ sets:
     set_name: Retro Pack 2
     rarities:
     - Common
+  - set_number: MAMA-EN046
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   - set_number: LOD-000
     set_name: Legacy of Darkness
     rarities:
@@ -65,6 +69,10 @@ sets:
     set_name: Retro Pack 2
     rarities:
     - Common
+  - set_number: MAMA-DE046
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DB2-FR177
     set_name: Dark Beginning 2
@@ -74,6 +82,10 @@ sets:
     set_name: Retro Pack 2
     rarities:
     - Common
+  - set_number: MAMA-FR046
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DB2-IT177
     set_name: Dark Beginning 2
@@ -83,6 +95,15 @@ sets:
     set_name: Retro Pack 2
     rarities:
     - Common
+  - set_number: MAMA-IT046
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: MAMA-PT046
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: MA-17
     set_name: Mythological Age
