--- a/data/cards/06625096.yaml
+++ b/data/cards/06625096.yaml
@@ -45,26 +45,46 @@ sets:
     set_name: Primal Origin
     rarities:
     - Rare
+  - set_number: MAMA-EN052
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: PRIO-DE036
     set_name: Primal Origin
     rarities:
     - Rare
+  - set_number: MAMA-DE052
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: PRIO-FR036
     set_name: Primal Origin
     rarities:
     - Rare
+  - set_number: MAMA-FR052
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: PRIO-IT036
     set_name: Primal Origin
     rarities:
     - Rare
+  - set_number: MAMA-IT052
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: PRIO-PT036
     set_name: Primal Origin
     rarities:
     - Rare
+  - set_number: MAMA-PT052
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: PRIO-JP036
     set_name: Primal Origin
