--- a/data/cards/08491308.yaml
+++ b/data/cards/08491308.yaml
@@ -66,6 +66,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-EN007
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: CYHO-DE047
     set_name: Cybernetic Horizon
@@ -79,6 +83,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-DE007
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: CYHO-FR047
     set_name: Cybernetic Horizon
@@ -92,6 +100,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-FR007
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: CYHO-IT047
     set_name: Cybernetic Horizon
@@ -105,6 +117,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-IT007
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: CYHO-PT047
     set_name: Cybernetic Horizon
@@ -118,6 +134,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-PT007
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: CYHO-JP047
     set_name: Cybernetic Horizon
