--- a/data/cards/11609969.yaml
+++ b/data/cards/11609969.yaml
@@ -95,6 +95,10 @@ sets:
     set_name: Pendulum Domination Structure Deck
     rarities:
     - Common
+  - set_number: MAMA-EN053
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DOCS-DE092
     set_name: Dimension of Chaos
@@ -108,6 +112,10 @@ sets:
     set_name: Pendulum Domination Structure Deck
     rarities:
     - Common
+  - set_number: MAMA-DE053
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DOCS-FR092
     set_name: Dimension of Chaos
@@ -121,6 +129,10 @@ sets:
     set_name: Pendulum Domination Structure Deck
     rarities:
     - Common
+  - set_number: MAMA-FR053
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DOCS-IT092
     set_name: Dimension of Chaos
@@ -134,6 +146,10 @@ sets:
     set_name: Pendulum Domination Structure Deck
     rarities:
     - Common
+  - set_number: MAMA-IT053
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DOCS-PT092
     set_name: Dimension of Chaos
@@ -147,6 +163,10 @@ sets:
     set_name: Pendulum Domination Structure Deck
     rarities:
     - Common
+  - set_number: MAMA-PT053
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SPRG-JP004
     set_name: 'Booster SP: Raging Masters'
