--- a/data/cards/14821890.yaml
+++ b/data/cards/14821890.yaml
@@ -43,26 +43,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MAMA-EN044
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BODE-DE073
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MAMA-DE044
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BODE-FR073
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MAMA-FR044
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BODE-IT073
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MAMA-IT044
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BODE-PT073
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MAMA-PT044
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: BODE-JP073
     set_name: Burst of Destiny
