--- a/data/cards/17484499.yaml
+++ b/data/cards/17484499.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Common
+  - set_number: MAMA-EN032
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   - set_number: SP1-EN004
     set_name: Shonen Jump Vol. 4, Issue 2 promotional card
     rarities:
@@ -76,6 +80,10 @@ sets:
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Common
+  - set_number: MAMA-DE032
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: RP01-FR099
     set_name: Retro Pack
@@ -89,6 +97,10 @@ sets:
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Common
+  - set_number: MAMA-FR032
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: RP01-IT099
     set_name: Retro Pack
@@ -102,6 +114,10 @@ sets:
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Common
+  - set_number: MAMA-IT032
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: PGL2-PT066
     set_name: 'Premium Gold: Return of the Bling'
@@ -111,6 +127,10 @@ sets:
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Common
+  - set_number: MAMA-PT032
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: WJ-04
     set_name: Weekly Shōnen Jump 2002, Issue 4–5 promotional card
