--- a/data/cards/20001443.yaml
+++ b/data/cards/20001443.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MAMA-EN034
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BODE-DE003
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MAMA-DE034
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BODE-FR003
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MAMA-FR034
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BODE-IT003
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MAMA-IT034
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BODE-PT003
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MAMA-PT034
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: BODE-JP003
     set_name: Burst of Destiny
