--- a/data/cards/24010609.yaml
+++ b/data/cards/24010609.yaml
@@ -47,6 +47,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Common
+  - set_number: MAMA-EN012
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DASA-DE038
     set_name: Dark Saviors
@@ -56,6 +60,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Common
+  - set_number: MAMA-DE012
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DASA-FR038
     set_name: Dark Saviors
@@ -65,6 +73,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Common
+  - set_number: MAMA-FR012
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DASA-IT038
     set_name: Dark Saviors
@@ -74,6 +86,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Common
+  - set_number: MAMA-IT012
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DASA-PT038
     set_name: Dark Saviors
@@ -83,6 +99,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Common
+  - set_number: MAMA-PT012
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBDS-JP038
     set_name: 'Deck Build Pack: Dark Savers'
