--- a/data/cards/26077387.yaml
+++ b/data/cards/26077387.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: OTS Tournament Pack 20
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-EN004
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DASA-DE029
     set_name: Dark Saviors
@@ -85,6 +89,10 @@ sets:
     set_name: OTS Tournament Pack 20
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-DE004
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DASA-FR029
     set_name: Dark Saviors
@@ -106,6 +114,10 @@ sets:
     set_name: OTS Tournament Pack 20
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-FR004
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DASA-IT029
     set_name: Dark Saviors
@@ -127,6 +139,10 @@ sets:
     set_name: OTS Tournament Pack 20
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-IT004
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DASA-PT029
     set_name: Dark Saviors
@@ -148,6 +164,10 @@ sets:
     set_name: OTS Tournament Pack 20
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-PT004
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBDS-JP029
     set_name: 'Deck Build Pack: Dark Savers'
