--- a/data/cards/29884951.yaml
+++ b/data/cards/29884951.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MAMA-EN037
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BODE-DE006
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MAMA-DE037
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BODE-FR006
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MAMA-FR037
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BODE-IT006
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MAMA-IT037
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BODE-PT006
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MAMA-PT037
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: BODE-JP006
     set_name: Burst of Destiny
