--- a/data/cards/34294855.yaml
+++ b/data/cards/34294855.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: MAMA-EN048
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: PTDN-DE090
     set_name: Phantom Darkness
@@ -70,6 +74,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: MAMA-DE048
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: PTDN-FR090
     set_name: Phantom Darkness
@@ -84,6 +92,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: MAMA-FR048
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: PTDN-IT090
     set_name: Phantom Darkness
@@ -98,6 +110,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: MAMA-IT048
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DL16-PT003
     set_name: Duelist League 16 participation cards
@@ -107,6 +123,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: MAMA-PT048
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: LE7-JP003
     set_name: Limited Edition 7
