--- a/data/cards/39475024.yaml
+++ b/data/cards/39475024.yaml
@@ -70,26 +70,46 @@ sets:
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-EN018
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: HISU-DE036
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-DE018
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: HISU-FR036
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-FR018
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: HISU-IT036
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-IT018
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: HISU-PT036
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-PT018
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBHS-JP036
     set_name: 'Deck Build Pack: Hidden Summoners'
