--- a/data/cards/41729254.yaml
+++ b/data/cards/41729254.yaml
@@ -49,26 +49,46 @@ sets:
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-EN017
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: HISU-DE029
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-DE017
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: HISU-FR029
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-FR017
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: HISU-IT029
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-IT017
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: HISU-PT029
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-PT017
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBHS-JP029
     set_name: 'Deck Build Pack: Hidden Summoners'
