--- a/data/cards/42429678.yaml
+++ b/data/cards/42429678.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Ignition Assault
     rarities:
     - Rare
+  - set_number: MAMA-EN055
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: IGAS-DE002
     set_name: Ignition Assault
     rarities:
     - Rare
+  - set_number: MAMA-DE055
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: IGAS-FR002
     set_name: Ignition Assault
     rarities:
     - Rare
+  - set_number: MAMA-FR055
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: IGAS-IT002
     set_name: Ignition Assault
     rarities:
     - Rare
+  - set_number: MAMA-IT055
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: IGAS-PT002
     set_name: Ignition Assault
     rarities:
     - Rare
+  - set_number: MAMA-PT055
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: IGAS-JP002
     set_name: Ignition Assault
