--- a/data/cards/42542842.yaml
+++ b/data/cards/42542842.yaml
@@ -48,26 +48,46 @@ sets:
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-EN016
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: HISU-DE027
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-DE016
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: HISU-FR027
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-FR016
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: HISU-IT027
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-IT016
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: HISU-PT027
     set_name: Hidden Summoners
     rarities:
     - Secret Rare
+  - set_number: MAMA-PT016
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBHS-JP027
     set_name: 'Deck Build Pack: Hidden Summoners'
