--- a/data/cards/47710198.yaml
+++ b/data/cards/47710198.yaml
@@ -60,26 +60,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MAMA-EN040
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BACH-DE041
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MAMA-DE040
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BACH-FR041
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MAMA-FR040
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BACH-IT041
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MAMA-IT040
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BACH-PT041
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MAMA-PT040
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: BACH-JP041
     set_name: Battle of Chaos
