--- a/data/cards/56465981.yaml
+++ b/data/cards/56465981.yaml
@@ -43,9 +43,17 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MAMA-EN041
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BODE-DE053
     set_name: Burst of Destiny
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-DE041
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   fr:
@@ -53,14 +61,26 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MAMA-FR041
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BODE-IT053
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MAMA-IT041
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BODE-PT053
     set_name: Burst of Destiny
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-PT041
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   ja:
