--- a/data/cards/56495147.yaml
+++ b/data/cards/56495147.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MAMA-EN035
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BODE-DE004
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MAMA-DE035
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BODE-FR004
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MAMA-FR035
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BODE-IT004
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MAMA-IT035
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BODE-PT004
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MAMA-PT035
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: BODE-JP004
     set_name: Burst of Destiny
