--- a/data/cards/57916305.yaml
+++ b/data/cards/57916305.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Super Rare
+  - set_number: MAMA-EN024
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: INCH-DE020
     set_name: The Infinity Chasers
@@ -66,6 +70,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Super Rare
+  - set_number: MAMA-DE024
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: INCH-FR020
     set_name: The Infinity Chasers
@@ -79,6 +87,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Super Rare
+  - set_number: MAMA-FR024
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: INCH-IT020
     set_name: The Infinity Chasers
@@ -92,6 +104,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Super Rare
+  - set_number: MAMA-IT024
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: INCH-PT020
     set_name: The Infinity Chasers
@@ -105,6 +121,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Super Rare
+  - set_number: MAMA-PT024
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBIC-JP020
     set_name: 'Deck Build Pack: Infinity Chasers'
