--- a/data/cards/62849088.yaml
+++ b/data/cards/62849088.yaml
@@ -76,30 +76,50 @@ sets:
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MAMA-EN033
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DAMA-DE009
     set_name: Dawn of Majesty
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MAMA-DE033
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DAMA-FR009
     set_name: Dawn of Majesty
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MAMA-FR033
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DAMA-IT009
     set_name: Dawn of Majesty
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MAMA-IT033
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DAMA-PT009
     set_name: Dawn of Majesty
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MAMA-PT033
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DAMA-JP009
     set_name: Dawn of Majesty
