--- a/data/cards/62968263.yaml
+++ b/data/cards/62968263.yaml
@@ -49,26 +49,46 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: MAMA-EN057
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: LDS2-DE052
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: MAMA-DE057
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: LDS2-FR052
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: MAMA-FR057
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: LDS2-IT052
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: MAMA-IT057
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: LDS2-PT052
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: MAMA-PT057
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: LGB1-JP029
     set_name: Legendary Gold Box
