--- a/data/cards/63288573.yaml
+++ b/data/cards/63288573.yaml
@@ -74,6 +74,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-EN005
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DASA-DE027
     set_name: Dark Saviors
@@ -95,6 +99,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-DE005
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DASA-FR027
     set_name: Dark Saviors
@@ -116,6 +124,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-FR005
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DASA-IT027
     set_name: Dark Saviors
@@ -137,6 +149,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-IT005
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DASA-PT027
     set_name: Dark Saviors
@@ -158,6 +174,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-PT005
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBDS-JP027
     set_name: 'Deck Build Pack: Dark Savers'
