--- a/data/cards/64202399.yaml
+++ b/data/cards/64202399.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: MAMA-EN056
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: LDS2-DE015
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: MAMA-DE056
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: LDS2-FR015
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: MAMA-FR056
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: LDS2-IT015
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: MAMA-IT056
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: LDS2-PT015
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: MAMA-PT056
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: LGB1-JP005
     set_name: Legendary Gold Box
