--- a/data/cards/64756282.yaml
+++ b/data/cards/64756282.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: MAMA-EN023
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: IGAS-DE021
     set_name: Ignition Assault
@@ -62,6 +66,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: MAMA-DE023
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: IGAS-FR021
     set_name: Ignition Assault
@@ -71,6 +79,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: MAMA-FR023
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: IGAS-IT021
     set_name: Ignition Assault
@@ -80,6 +92,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: MAMA-IT023
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: IGAS-PT021
     set_name: Ignition Assault
@@ -89,6 +105,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: MAMA-PT023
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: IGAS-JP021
     set_name: Ignition Assault
