--- a/data/cards/69248256.yaml
+++ b/data/cards/69248256.yaml
@@ -58,30 +58,50 @@ sets:
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MAMA-EN038
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BODE-DE041
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MAMA-DE038
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BODE-FR041
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MAMA-FR038
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BODE-IT041
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MAMA-IT038
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BODE-PT041
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MAMA-PT038
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: BODE-JP041
     set_name: Burst of Destiny
