--- a/data/cards/72989439.yaml
+++ b/data/cards/72989439.yaml
@@ -97,6 +97,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-EN047
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   - set_number: IOC-025
     set_name: Invasion of Chaos
     rarities:
@@ -147,6 +151,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-DE047
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DR2-FR025
     set_name: Dark Revelation Volume 2
@@ -189,6 +197,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-FR047
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DR2-IT025
     set_name: Dark Revelation Volume 2
@@ -231,6 +243,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-IT047
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: CT10-PT005
     set_name: 2013 Collectible Tins Wave 1
@@ -257,6 +273,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-PT047
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: 306-025
     set_name: Controller of Chaos
