--- a/data/cards/75147529.yaml
+++ b/data/cards/75147529.yaml
@@ -59,9 +59,17 @@ sets:
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: MAMA-EN008
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DUOV-DE024
     set_name: Duel Overload
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-DE008
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   fr:
@@ -69,14 +77,26 @@ sets:
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: MAMA-FR008
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DUOV-IT024
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: MAMA-IT008
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DUOV-PT024
     set_name: Duel Overload
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-PT008
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   ja:
