--- a/data/cards/76039636.yaml
+++ b/data/cards/76039636.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: Duelist League 14 participation cards
     rarities:
     - Rare
+  - set_number: MAMA-EN049
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   - set_number: DR04-EN144
     set_name: Dark Revelation Volume 4
     rarities:
@@ -72,6 +76,10 @@ sets:
     set_name: Duelist League 14 participation cards
     rarities:
     - Rare
+  - set_number: MAMA-DE049
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: SOI-FR024
     set_name: Shadow of Infinity
@@ -86,6 +94,10 @@ sets:
     set_name: Duelist League 14 participation cards
     rarities:
     - Rare
+  - set_number: MAMA-FR049
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: SOI-IT024
     set_name: Shadow of Infinity
@@ -100,6 +112,15 @@ sets:
     set_name: Duelist League 14 participation cards
     rarities:
     - Rare
+  - set_number: MAMA-IT049
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: MAMA-PT049
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SOI-JP024
     set_name: Shadow of Infinity
