--- a/data/cards/78836195.yaml
+++ b/data/cards/78836195.yaml
@@ -43,26 +43,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MAMA-EN043
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BODE-DE072
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MAMA-DE043
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BODE-FR072
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MAMA-FR043
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BODE-IT072
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MAMA-IT043
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BODE-PT072
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MAMA-PT043
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: BODE-JP072
     set_name: Burst of Destiny
