--- a/data/cards/90673288.yaml
+++ b/data/cards/90673288.yaml
@@ -66,6 +66,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-EN006
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DASA-DE028
     set_name: Dark Saviors
@@ -79,6 +83,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-DE006
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DASA-FR028
     set_name: Dark Saviors
@@ -92,6 +100,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-FR006
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DASA-IT028
     set_name: Dark Saviors
@@ -105,6 +117,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-IT006
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DASA-PT028
     set_name: Dark Saviors
@@ -118,6 +134,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-PT006
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBDS-JP028
     set_name: 'Deck Build Pack: Dark Savers'
