--- a/data/cards/92826944.yaml
+++ b/data/cards/92826944.yaml
@@ -82,6 +82,10 @@ sets:
     set_name: 'Structure Deck: Zombie Horde'
     rarities:
     - Common
+  - set_number: MAMA-EN050
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   - set_number: DT07-EN011
     set_name: Duel Terminal 7a
     rarities:
@@ -128,6 +132,10 @@ sets:
     set_name: 'Structure Deck: Zombie Horde'
     rarities:
     - Common
+  - set_number: MAMA-DE050
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: PP02-FR016
     set_name: Premium Pack 2 (TCG)
@@ -166,6 +174,10 @@ sets:
     set_name: 'Structure Deck: Zombie Horde'
     rarities:
     - Common
+  - set_number: MAMA-FR050
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: PP02-IT016
     set_name: Premium Pack 2 (TCG)
@@ -208,6 +220,10 @@ sets:
     set_name: 'Structure Deck: Zombie Horde'
     rarities:
     - Common
+  - set_number: MAMA-IT050
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DL17-PT005
     set_name: Duelist League 17 participation cards
@@ -234,6 +250,10 @@ sets:
     set_name: 'Structure Deck: Zombie Horde'
     rarities:
     - Common
+  - set_number: MAMA-PT050
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: PP11-JP004
     set_name: Premium Pack 11
