--- a/data/cards/93490856.yaml
+++ b/data/cards/93490856.yaml
@@ -47,9 +47,17 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MAMA-EN036
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BODE-DE005
     set_name: Burst of Destiny
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-DE036
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   fr:
@@ -57,14 +65,26 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MAMA-FR036
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BODE-IT005
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MAMA-IT036
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BODE-PT005
     set_name: Burst of Destiny
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-PT036
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   ja:
