--- a/data/cards/93850690.yaml
+++ b/data/cards/93850690.yaml
@@ -43,26 +43,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MAMA-EN042
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BODE-DE054
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MAMA-DE042
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BODE-FR054
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MAMA-FR042
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BODE-IT054
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MAMA-IT042
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BODE-PT054
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MAMA-PT042
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: BODE-JP054
     set_name: Burst of Destiny
