--- a/data/cards/94801854.yaml
+++ b/data/cards/94801854.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: 'Structure Deck: Zombie Horde'
     rarities:
     - Common
+  - set_number: MAMA-EN054
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: TDIL-DE031
     set_name: The Dark Illusion
@@ -68,6 +72,10 @@ sets:
     set_name: 'Structure Deck: Zombie Horde'
     rarities:
     - Common
+  - set_number: MAMA-DE054
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: TDIL-FR031
     set_name: The Dark Illusion
@@ -81,6 +89,10 @@ sets:
     set_name: 'Structure Deck: Zombie Horde'
     rarities:
     - Common
+  - set_number: MAMA-FR054
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: TDIL-IT031
     set_name: The Dark Illusion
@@ -94,6 +106,10 @@ sets:
     set_name: 'Structure Deck: Zombie Horde'
     rarities:
     - Common
+  - set_number: MAMA-IT054
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: TDIL-PT031
     set_name: The Dark Illusion
@@ -107,6 +123,10 @@ sets:
     set_name: 'Structure Deck: Zombie Horde'
     rarities:
     - Common
+  - set_number: MAMA-PT054
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: TDIL-JP031
     set_name: The Dark Illusion
