--- a/data/cards/97940434.yaml
+++ b/data/cards/97940434.yaml
@@ -61,6 +61,10 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts'
     rarities:
     - Common
+  - set_number: MAMA-EN051
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: STOR-DE085
     set_name: Storm of Ragnarok
@@ -79,6 +83,10 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts'
     rarities:
     - Common
+  - set_number: MAMA-DE051
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: STOR-FR085
     set_name: Storm of Ragnarok
@@ -97,6 +105,10 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts'
     rarities:
     - Common
+  - set_number: MAMA-FR051
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: STOR-IT085
     set_name: Storm of Ragnarok
@@ -115,6 +127,10 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts'
     rarities:
     - Common
+  - set_number: MAMA-IT051
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BP02-PT095
     set_name: 'Battle Pack 2: War of the Giants'
@@ -129,6 +145,10 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts'
     rarities:
     - Common
+  - set_number: MAMA-PT051
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: EXP4-JP036
     set_name: Extra Pack Volume 4
