--- a/data/cards/98338152.yaml
+++ b/data/cards/98338152.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: MAMA-EN010
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DASA-DE034
     set_name: Dark Saviors
@@ -62,6 +66,10 @@ sets:
     - Secret Rare
   - set_number: MP19-DE264
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-DE010
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   fr:
@@ -77,6 +85,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: MAMA-FR010
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DASA-IT034
     set_name: Dark Saviors
@@ -90,6 +102,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: MAMA-IT010
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DASA-PT034
     set_name: Dark Saviors
@@ -101,6 +117,10 @@ sets:
     - Secret Rare
   - set_number: MP19-PT264
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-PT010
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   ja:
