--- a/data/cards/99137266.yaml
+++ b/data/cards/99137266.yaml
@@ -45,26 +45,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MAMA-EN045
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BACH-DE067
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MAMA-DE045
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BACH-FR067
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MAMA-FR045
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BACH-IT067
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MAMA-IT045
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BACH-PT067
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MAMA-PT045
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: BACH-JP067
     set_name: Battle of Chaos
