--- a/data/cards/81260679.yaml
+++ b/data/cards/81260679.yaml
@@ -1,7 +1,7 @@
 konami_id: 18017
 password: 81260679
 name:
-  en: Mikanko of the Oohime
+  en: Ohime the Manifested Mikanko
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 大日女之御巫
 text:
   en: |-
-    You can Ritual Summon this card with "Mikanko Kagura". Cannot be destroyed by battle, also your opponent takes any battle damage you would take from battles involving this card instead. You can only use each of the following effects of "Mikanko of the Oohime" once per turn. You can reveal this card in your hand; add 1 "Mikanko" card from your Deck to your hand, except "Mikanko of the Oohime", then discard 1 card. (Quick Effect): You can target 1 Equip Spell in your GY; equip it to an appropriate monster on the field.
+    You can Ritual Summon this card with "Mikanko Kagura". Cannot be destroyed by battle, also your opponent takes any battle damage you would have taken from battles involving this card. You can only use each of the following effects of "Ohime the Manifested Mikanko" once per turn. You can reveal this card in your hand; add 1 "Mikanko" card from your Deck to your hand, except "Ohime the Manifested Mikanko", then discard 1 card. (Quick Effect): You can target 1 Equip Spell in your GY; equip it to 1 appropriate monster on the field.
   de:
   es:
   fr:
@@ -37,6 +37,31 @@ ritual_spell: Mikanko Kagura
 series:
 - Mikanko
 sets:
+  en:
+  - set_number: AMDE-EN027
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: AMDE-DE027
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: AMDE-FR027
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: AMDE-IT027
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: AMDE-PT027
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBAD-JP027
     set_name: 'Deck Build Pack: Amazing Defenders'
