--- a/data/cards/37495766.yaml
+++ b/data/cards/37495766.yaml
@@ -1,7 +1,7 @@
 konami_id: 17997
 password: 37495766
 name:
-  en: Rescue-ACE Turbulance
+  en: Rescue-ACE Turbulence
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 救援王牌 涡轮湍流救火战车
 text:
   en: |-
-    You can banish 2 "Rescue-ACE" cards from your GY; Special Summon this card from your hand. During your Main Phase: You can Set up to 4 "Rescue-ACE" Quick-Play Spells and/or Normal Traps with different names directly from your Deck. If another card(s) you control leaves the field by an opponent's card effect (except during the Damage Step): You can target 1 card on the field; destroy it. You can only use each effect of "Rescue-ACE Turbulance" once per turn.
+    You can banish 2 "Rescue-ACE" cards from your GY; Special Summon this card from your hand. During your Main Phase: You can Set up to 4 "Rescue-ACE" Quick-Play Spells / Normal Traps, with different names, directly from your Deck. If another card(s) you control leaves the field by an opponent's card effect (except during the Damage Step): You can target 1 card on the field; destroy it. You can only use each effect of "Rescue-ACE Turbulence" once per turn.
   de:
   es:
   fr:
@@ -36,6 +36,31 @@ def: 3000
 series:
 - Rescue-ACE
 sets:
+  en:
+  - set_number: AMDE-EN007
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: AMDE-DE007
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: AMDE-FR007
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: AMDE-IT007
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: AMDE-PT007
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBAD-JP007
     set_name: 'Deck Build Pack: Amazing Defenders'
