--- a/data/cards/51822687.yaml
+++ b/data/cards/51822687.yaml
@@ -1,7 +1,7 @@
 konami_id: 18007
 password: 51822687
 name:
-  en: Expurery Happiness
+  en: Expurrely Happiness
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 7 monsters
-    You can also Xyz Summon this card by using 1 Rank 2 monster you control with 5 or more materials. (Transfer its materials to this card.) During your Main Phase: You can detach 1 material from this card, and if you do, negate the effects of all face-up monsters your opponent currently controls, until the end of this turn. If this card has a Level 1 "Purery" monster as material, your opponent cannot activate cards or effects in response to this effect's activation. When an attack is declared involving this card with 5 or more materials: Inflict 1500 damage to your opponent.
+    You can also Xyz Summon this card by using a Rank 2 monster you control with 5 or more materials. (Transfer its materials to this card.) During your Main Phase: You can detach 1 material from this card, and if you do, negate the effects of all face-up monsters your opponent currently controls, until the end of this turn. Your opponent cannot activate cards or effects in response to this effect's activation if this card has a Level 1 "Purrely" monster as material. When an attack is declared involving this card that has 5 or more materials: Inflict 1500 damage to your opponent.
   de:
   es:
   fr:
@@ -39,6 +39,26 @@ def: 1100
 series:
 - Purery
 sets:
+  en:
+  - set_number: AMDE-EN017
+    set_name: Amazing Defenders
+    rarities:
+  de:
+  - set_number: AMDE-DE017
+    set_name: Amazing Defenders
+    rarities:
+  fr:
+  - set_number: AMDE-FR017
+    set_name: Amazing Defenders
+    rarities:
+  it:
+  - set_number: AMDE-IT017
+    set_name: Amazing Defenders
+    rarities:
+  pt:
+  - set_number: AMDE-PT017
+    set_name: Amazing Defenders
+    rarities:
   ja:
   - set_number: DBAD-JP017
     set_name: 'Deck Build Pack: Amazing Defenders'
