--- a/data/cards/25904894.yaml
+++ b/data/cards/25904894.yaml
@@ -12,7 +12,7 @@ name:
   ko: 자동기계대권현 무령무
   ko_rr: Jadonggigyedaegwonhyeon Muryeongmu
   zh-TW:
-  zh-CN: 机巧大权现 无零武
+  zh-CN: 机偶大权现 无零武
 text:
   en: |-
     1 Tuner + 1+ non-Tuner Machine monsters
@@ -40,10 +40,8 @@ text:
     ①: 이 카드가 싱크로 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "자동기계" 몬스터 1장을 특수 소환한다. ②: 이 카드가 몬스터 존에 존재하는 한, 자신의 수비 표시 몬스터는 전투로는 파괴되지 않는다. ③: 1턴에 1번, 자신 필드의 앞면 표시의 "자동기계" 몬스터의 표시 형식이 변경되었을 경우, 상대 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 제외한다.
   zh-TW:
   zh-CN: |-
-    调整＋调整以外的机械族怪兽1只以上
-    ①：这张卡同调召唤成功的场合才能发动。从卡组把1只「机巧」怪兽特殊召唤。
-    ②：只要这张卡在怪兽区域存在，自己的守备表示怪兽不会被战斗破坏。
-    ③：1回合1次，自己场上的表侧表示的「机巧」怪兽的表示形式变更的场合，以对方场上1张卡为对象才能发动。那张卡除外。
+    协调＋1只以上协调以外的机械族怪兽
+    ①：此卡同步召唤成功的情况下可以发动。从牌组将1只"机偶"怪兽特殊召唤。②：只要此卡存在于怪兽区域，自己的守备表示怪兽不会因战斗被破坏。③：1回合1次，自己场上表侧表示的"机偶"怪兽的表示形式被变更的情况下，以对手场上的1张卡为对象可以发动。将该卡除外。
 card_type: Monster
 monster_type_line: Machine / Synchro / Effect
 attribute: EARTH
@@ -93,6 +91,11 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Ultimate Rare
+  zh-CN:
+  - set_number: CL02-SC111
+    set_name: Classic Pack 02
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
