--- a/data/cards/09603252.yaml
+++ b/data/cards/09603252.yaml
@@ -2,11 +2,11 @@ konami_id: 17037
 password: 9603252
 name:
   en: Witchcrafter Vice-Madame
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Hexwerkerin Vize-Madam
+  es: Artibruja Vice-Madame
+  fr: Vice-Madame, Artisanesorcière
+  it: Stregartigiana Vice-Madama
+  pt: Fazticeira Vice-Madame
   ja: ウィッチクラフト・バイスマスター
   ja_romaji: Wicchikurafuto Baisumasutā
   ko: 위치크래프트 바이스마스터
@@ -20,11 +20,36 @@ text:
     ● Destroy 1 card on the field.
     ● Special Summon 1 Level 6 or lower "Witchcrafter" monster from your hand or Deck.
     ● Add 1 "Witchcrafter" Spell/Trap from your GY to your hand.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    1 „Hexwerker“-Monster + 1 Hexer-Monster
+    Wenn eine Zauberkarte, ein Zaubereffekt oder ein Effekt eines Hexer-Nichtfusions-Monsters aktiviert wird (Schnelleffekt): Du kannst 1 dieser Effekte aktivieren (aber du kannst jeden Effekt von „Hexwerkerin Vize-Madam“ nur einmal pro Spielzug verwenden).
+    ● Zerstöre 1 Karte auf dem Spielfeld.
+    ● Beschwöre 1 „Hexwerker“-Monster der Stufe 6 oder niedriger als Spezialbeschwörung von deiner Hand oder deinem Deck.
+    ● Füge deiner Hand 1 „Hexwerker“-Zauber/Falle von deinem Friedhof hinzu.
+  es: |-
+    1 monstruo "Artibruja" + 1 monstruo Lanzador de Conjuros
+    Cuando es activada una Carta Mágica o su efecto, o el efecto de un monstruo Lanzador de Conjuros que no sea de Fusión (Efecto Rápido): puedes activar 1 de estos efectos (pero sólo puedes usar cada efecto de "Artibruja Vice-Madame" una vez por turno).
+    ● Destruye 1 carta en el Campo.
+    ● Invoca de Modo Especial, desde tu mano o Deck, 1 monstruo "Artibruja" de Nivel 6 o menor.
+    ● Añade a tu mano 1 Mágica/Trampa "Artibruja" en tu Cementerio.
+  fr: |-
+    1 monstre "Artisanesorcière" + 1 monstre Magicien
+    Lorsqu'une Carte Magie, effet de Magie ou effet de monstre non-Fusion Magicien est activé (Effet Rapide) : vous pouvez activer 1 de ces effets (mais vous ne pouvez utiliser chaque effet de "Vice-Madame, Artisanesorcière" qu'une fois par tour).
+    ● Détruisez 1 carte sur le Terrain.
+    ● Invoquez Spécialement 1 monstre "Artisanesorcière" de max. Niveau 6 depuis votre main ou Deck.
+    ● Ajoutez 1 Magie/Piège "Artisanesorcière" depuis votre Cimetière à votre main.
+  it: |-
+    1 mostro "Stregartigiana" + 1 mostro Incantatore
+    Quando viene attivata una Carta Magia o un suo effetto, o l'effetto di un mostro Incantatore non-Fusione (Effetto Rapido): puoi attivare 1 di questi effetti (ma puoi utilizzare ogni effetto di "Stregartigiana Vice-Madama" una sola volta per turno).
+    ● Distruggi 1 carta sul Terreno.
+    ● Evoca Specialmente 1 mostro "Stregartigiana" di Livello 6 o inferiore dalla tua mano o Deck.
+    ● Aggiungi 1 Magia/Trappola "Stregartigiana" dal tuo Cimitero alla tua mano.
+  pt: |-
+    1 monstro "Fazticeira" + 1 monstro Mago
+    Quando um Card de Magia ou seus efeitos, ou o efeito de um monstro Mago que não seja de Fusão, for ativado (Efeito Rápido): você pode ativar 1 desses efeitos (mas você só pode usar cada efeito de "Fazticeira Vice-Madame" uma vez por turno).
+    ● Destrua 1 card no campo.
+    ● Invoque por Invocação-Especial 1 monstro "Fazticeira" de Nível 6 ou menos da sua mão ou do Deck.
+    ● Adicione 1 Magia/Armadilha "Fazticeira" do seu Cemitério à sua mão.
   ja: |-
     「ウィッチクラフト」モンスター＋魔法使い族モンスター
     ①：融合モンスター以外の魔法使い族モンスターまたは魔法カードの効果が発動した時、以下の効果から１つを選択して発動できる。「ウィッチクラフト・バイスマスター」の以下の効果はそれぞれ１ターンに１度しか選択できない。●フィールドのカード１枚を選んで破壊する。●手札・デッキからレベル６以下の「ウィッチクラフト」モンスター１体を特殊召喚する。●自分の墓地から「ウィッチクラフト」魔法・罠カード１枚を選んで手札に加える。
