--- a/data/cards/25209168.yaml
+++ b/data/cards/25209168.yaml
@@ -2,11 +2,11 @@ konami_id: 17608
 password: 25209168
 name:
   en: Exchange of Despair and Hope
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Austausch von Verzweiflung und Hoffnung
+  es: Inversión de Desesperación y Esperanza
+  fr: Permutation du Désespoir et de l'Espoir
+  it: Scambio di Disperazione e Speranza
+  pt: Troca de Desespero e Esperança
   ja: <ruby>絶<rt>ぜつ</rt></ruby><ruby>望<rt>ぼう</rt></ruby>と<ruby>希<rt>き</rt></ruby><ruby>望<rt>ぼう</rt></ruby>の<ruby>逆<rt>ぎゃく</rt></ruby><ruby>転<rt>てん</rt></ruby>
   ja_romaji: Zetsubō to Kibō no Gyakuten
   ko: 절망과 희망의 역전
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     If you control 3 or more EARTH Fairy monsters: Send as many monsters from the field to the GY as possible (min. 1), then each player can Special Summon monsters from their opponent's GY to their own field, up to the number of monsters sent to their opponent's GY by this effect, then, if a monster was Special Summoned by this effect and "Exchange of the Spirit" is in your GY, you can Set 1 Trap directly from your Deck. It can be activated this turn. You can only activate 1 "Exchange of Despair and Hope" per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls du 3 oder mehr ERDE Fee-Monster kontrollierst: Lege so viele Monster vom Spielfeld auf den Friedhof wie möglich (min. 1), dann kann jeder Spieler Monster bis zur Anzahl der Monster, die durch diesen Effekt auf den Friedhof seines Gegners gelegt wurden, als Spezialbeschwörung vom Friedhof seines Gegners auf seine eigene Spielfeldseite beschwören, dann, falls durch diesen Effekt ein Monster als Spezialbeschwörung beschworen wurde und sich „Austausch des Geistes“ in deinem Friedhof befindet, kannst du 1 Falle direkt von deinem Deck setzen. Sie kann in diesem Spielzug aktiviert werden. Du kannst nur 1 „Austausch von Verzweiflung und Hoffnung“ pro Spielzug aktivieren.
+  es: |-
+    Si controlas 3 o más monstruos Hada de TIERRA: manda tantos monstruos del Campo al Cementerio como sea posible (mín. 1), y después cada jugador puede Invocar de Modo Especial monstruos desde el Cementerio de su adversario a su propio Campo, hasta el número de monstruos mandados al Cementerio de su adversario por este efecto y después, si un monstruo fue Invocado de Modo Especial por este efecto, e "Inversión de Sepulturas" está en tu Cementerio, puedes Colocar 1 Trampa directamente desde tu Deck. Ésta puede ser activada este turno. Sólo puedes activar 1 "Inversión de Desesperación y Esperanza" por turno.
+  fr: |-
+    Si vous contrôlez min. 3 monstres TERRE Elfe : envoyez autant de monstres depuis le Terrain au Cimetière que possible (min. 1), puis chaque joueur peut Invoquer Spécialement un nombre de monstres depuis le Cimetière de son adversaire sur son propre Terrain, inférieur ou égal au nombre de monstres envoyés au Cimetière de son adversaire par cet effet, puis, si un monstre a été Invoqué Spécialement par cet effet et que "Permutation des Mondes" est dans votre Cimetière, vous pouvez Poser 1 Piège directement depuis votre Deck. Il peut être activé ce tour. Vous ne pouvez activer qu'1 "Permutation du Désespoir et de l'Espoir" par tour.
+  it: |-
+    Se controlli 3 o più mostri TERRA Fata: manda tanti mostri dal Terreno al Cimitero quanti possibile (minimo 1), poi ogni giocatore può Evocare Specialmente mostri dal Cimitero del suo avversario sul suo stesso Terreno, fino al numero di mostri mandati al Cimitero del suo avversario da questo effetto, poi, se un mostro è stato Evocato Specialmente da questo effetto e "Scambio dello Spirito" è nel tuo Cimitero, puoi Posizionare 1 Trappola direttamente dal tuo Deck. Essa può essere attivata in questo turno. Puoi attivare solo 1 "Scambio di Disperazione e Speranza" per turno.
+  pt: |-
+    Se você controlar 3 ou mais monstros Fada de TERRA: envie tantos monstros do campo para o Cemitério quanto possível (mín. 1) e, depois, cada duelista pode Invocar monstros por Invocação-Especial do Cemitério do oponente dele para o campo dele, até o número de monstros enviados para o Cemitério do oponente dele por este efeito e, depois, se um monstro foi Invocado por Invocação-Especial por este efeito e "Troca de Espírito" estiver no seu Cemitério, você pode Baixar 1 Armadilha diretamente do seu Deck. Ela pode ser ativada neste turno. Você só pode ativar 1 "Troca de Desespero e Esperança" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドに天使族・地属性モンスターが３体以上存在する場合に発動できる。フィールドのモンスターを全て墓地へ送る。その後、お互いはこの効果でそれぞれ相手の墓地へ送られたモンスターの数まで、相手の墓地からモンスターを選んで自身のフィールドに特殊召喚できる。自分の墓地に「現世と冥界の逆転」が存在する場合、さらに自分はデッキから罠カード１枚を選んで自分フィールドにセットできる。この効果でセットしたカードはセットしたターンでも発動できる。
   ko: |-
