--- a/data/cards/33331231.yaml
+++ b/data/cards/33331231.yaml
@@ -2,26 +2,36 @@ konami_id: 17033
 password: 33331231
 name:
   en: Surgical Striker - H.A.M.P.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Chirurgischer Jäger - H.A.M.P.
+  es: Caza Quirúrgico - H.A.M.P.
+  fr: Assaut Chirurgical - H.A.M.P.
+  it: Assaltatore Chirurgico - H.A.M.P.
+  pt: Força Cirúrgica - H.A.M.P.
   ja: <ruby>閃<rt>せん</rt></ruby><ruby>術<rt>じゅつ</rt></ruby><ruby>兵<rt>へい</rt></ruby><ruby>器<rt>き</rt></ruby>－<ruby>Ｈ．Ａ．Ｍ．Ｐ．<rt>ハンプ</rt></ruby>
   ja_romaji: Senjutsuheiki - Hanpu
   ko: 섬술병기－<ruby>H.A.M.P.<rt>햄프</rt></ruby>
-  ko_rr: Seomsulbyeonggi - H.A.M.P.
+  ko_rr: Seomsulbyeonggi - Hempeu
   zh-TW:
   zh-CN: 闪术兵器-汉普
 text:
   en: |-
     (This card is always treated as a "Sky Striker" card.)
     If you control a "Sky Striker Ace" monster, you can Special Summon this card (from your hand) to either field by Tributing 1 monster from that field. You can only Special Summon "Surgical Striker - H.A.M.P." once per turn this way. When this card is destroyed by battle: You can target 1 card your opponent controls; destroy it.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    (Diese Karte wird immer als „Himmelsjäger“-Karte behandelt.)
+    Falls du ein „Himmelsjäger-Ass“-Monster kontrollierst, kannst du diese Karte als Spezialbeschwörung (von deiner Hand) auf eine beliebige Spielfeldseite beschwören, indem du 1 Monster von jener Spielfeldseite als Tribut anbietest. Du kannst „Chirurgischer Jäger - H.A.M.P.“ nur einmal pro Spielzug auf diese Art als Spezialbeschwörung beschwören. Wenn diese Karte durch Kampf zerstört wird: Du kannst 1 Karte wählen, die dein Gegner kontrolliert; zerstöre sie.
+  es: |-
+    (Esta carta se trata siempre como una carta "Caza del Cielo").
+    Si controlas un monstruo "Caza del Cielo As", puedes Invocar esta carta de Modo Especial (desde tu mano) a cualquier Campo Sacrificando 1 monstruo de ese Campo. Sólo puedes Invocar de Modo Especial "Caza Quirúrgico - H.A.M.P." una vez por turno de esta forma. Cuando esta carta es destruida en batalla: puedes seleccionar 1 carta que controle tu adversario; destrúyela.
+  fr: |-
+    (Cette carte est toujours traitée comme une carte "Assaut de l'Air".)
+    Si vous contrôlez un monstre "Assaut de l'Air - As", vous pouvez Invoquer Spécialement cette carte (depuis votre main) sur l'un des Terrains en Sacrifiant 1 monstre depuis ce Terrain. Vous ne pouvez Invoquer Spécialement "Assaut Chirurgical - H.A.M.P." qu'une fois par tour de cette façon. Lorsque cette carte est détruite au combat : vous pouvez cibler 1 carte contrôlée par votre adversaire ; détruisez-la.
+  it: |-
+    (Questa carta viene sempre considerata come una carta "Assaltatrice del Cielo".)
+    Se controlli un mostro "Assaltatrice del Cielo Asso", puoi Evocare Specialmente questa carta (dalla tua mano) su qualsiasi Terreno offrendo come Tributo 1 mostro da quel Terreno. Puoi Evocare Specialmente "Assaltatore Chirurgico - H.A.M.P." una sola volta per turno in questo modo. Quando questa carta viene distrutta in battaglia: puoi scegliere come bersaglio 1 carta controllata dal tuo avversario; distruggila.
+  pt: |-
+    (Este card deve ser sempre considerado como um card "Força Celeste".)
+    Se você controlar um monstro "Força Celeste - Ás", você pode Invocar este card por Invocação-Especial (da sua mão) em qualquer campo ao oferecer como Tributo 1 monstro desse campo. Você só pode Invocar "Força Cirúrgica - H.A.M.P." por Invocação-Especial uma vez por turno desta forma. Quando este card for destruído em batalha: você pode escolher 1 card que seu oponente controla; destrua-o.
   ja: |-
     このカード名はルール上「閃刀」カードとしても扱う。このカード名の①の方法による特殊召喚は１ターンに１度しかできない。①：自分フィールドに「閃刀姫」モンスターが存在する場合、このカードは自分または相手フィールドのモンスター１体をリリースし、そのコントローラーのフィールドに手札から特殊召喚できる。②：このカードが戦闘で破壊された時、相手フィールドのカード１枚を対象として発動できる。そのカードを破壊する。
   ko: |-
