--- a/data/cards/96084564.yaml
+++ b/data/cards/96084564.yaml
@@ -2,11 +2,11 @@ konami_id: 17553
 password: 96084564
 name:
   en: Aileron
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Aileron
+  es: Aileron
+  fr: Aileron
+  it: Aileron
+  pt: Aileron
   ja: エルロン
   ja_romaji: Eruron
   ko:
@@ -17,11 +17,21 @@ text:
   en: |-
     (This card is always treated as a "Sky Striker" card.)
     A "Sky Striker Ace" monster equipped with this card gains 400 ATK. You can only use 1 of the following effects of "Aileron" per turn, and only once that turn. During the Main Phase (Quick Effect): You can target 1 "Sky Striker Ace" monster you control; equip this card from your hand or field to it. If this card on the field is destroyed: You can send 1 "Sky Striker" Spell from your Deck to the GY.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    (Diese Karte wird immer als „Himmelsjäger“-Karte behandelt.)
+    Ein „Himmelsjäger-Ass“-Monster, das mit dieser Karte ausgerüstet ist, erhält 400 ATK. Du kannst nur 1 der folgenden Effekte von „Aileron“ pro Spielzug verwenden und in jenem Spielzug nur einmal. Während der Main Phase (Schnelleffekt): Du kannst 1 „Himmelsjäger-Ass“-Monster wählen, das du kontrollierst; rüste es mit dieser Karte von deiner Hand oder Spielfeldseite aus. Falls diese Karte auf dem Spielfeld zerstört wird: Du kannst 1 „Himmelsjäger“-Zauber von deinem Deck auf den Friedhof legen.
+  es: |-
+    (Esta carta se trata siempre como una carta "Caza del Cielo").
+    Un monstruo "Caza del Cielo As" equipado con esta carta gana 400 ATK. Sólo puedes usar 1 de los siguientes efectos de "Aileron" por turno, y sólo una vez ese turno. Durante la Main Phase (Efecto Rápido): puedes seleccionar 1 monstruo "Caza del Cielo As" que controles; equípale esta carta en tu mano o Campo. Si esta carta en el Campo es destruida: puedes mandar al Cementerio 1 Mágica "Caza del Cielo" en tu Deck.
+  fr: |-
+    (Cette carte est toujours traitée comme une carte "Assaut de l'Air".)
+    Un monstre "Assaut de l'Air - As" équipé avec cette carte gagne 400 ATK. Vous ne pouvez utiliser qu'1 des effets suivants de "Aileron" par tour, et uniquement une fois le tour. Durant la Main Phase (Effet Rapide) : vous pouvez cibler 1 monstre "Assaut de l'Air - As" que vous contrôlez ; équipez-lui cette carte depuis votre main ou Terrain. Si cette carte sur le Terrain est détruite : vous pouvez envoyer 1 Magie "Assaut de l'Air" depuis votre Deck au Cimetière.
+  it: |-
+    (Questa carta viene sempre considerata come una carta "Assaltatrice del Cielo".)
+    Un mostro "Assaltatrice del Cielo Asso" equipaggiato con questa carta guadagna 400 ATK. Puoi utilizzare solo 1 dei seguenti effetti di "Aileron" per turno, e solo una volta in quel turno. Durante la Main Phase (Effetto Rapido): puoi scegliere come bersaglio 1 mostro "Assaltatrice del Cielo Asso" che controlli; equipaggia questa carta dalla tua mano o Terreno a esso. Se questa carta sul Terreno viene distrutta: puoi mandare 1 Magia "Assaltatrice del Cielo" dal tuo Deck al Cimitero.
+  pt: |-
+    (Este card deve ser sempre considerado como um card "Força Celeste".)
+    Um monstro "Força Celeste - Ás" equipado com este card ganha 400 de ATK. Você só pode usar 1 dos seguintes efeitos de "Aileron" por turno e apenas uma vez por turno. Durante a Fase Principal (Efeito Rápido): você pode escolher 1 monstro "Força Celeste - Ás" que você controla; equipe este card da sua mão ou do campo a ele. Se este card no campo for destruído: você pode enviar 1 Magia "Força Celeste" do seu Deck para o Cemitério.
   ja: |-
     このカード名はルール上「閃刀」カードとしても扱う。このカード名の①③の効果は１ターンに１度、いずれか１つしか使用できない。①：自分・相手のメインフェイズに、自分フィールドの「閃刀姫」モンスター１体を対象として発動できる。自分の手札・フィールドからこのカードを装備カード扱いとしてそのモンスターに装備する。②：このカードを装備した「閃刀姫」モンスターの攻撃力は４００アップする。③：フィールドのこのカードが破壊された場合に発動できる。デッキから「閃刀」魔法カード１枚を墓地へ送る。
   ko:
