--- a/data/cards/98715423.yaml
+++ b/data/cards/98715423.yaml
@@ -2,11 +2,11 @@ konami_id: 17607
 password: 98715423
 name:
   en: Gravekeeper's Trap
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Grabwächters Falle
+  es: Trampa del Cuidador de Tumbas
+  fr: Piège des Protecteurs du Tombeau
+  it: Trappola Custode di Tombe
+  pt: Armadilha do Coveiro
   ja: <ruby>墓<rt>はか</rt></ruby><ruby>守<rt>もり</rt></ruby>の<ruby>罠<rt>わな</rt></ruby>
   ja_romaji: Hakamori no Wana
   ko: 묘지기의 함정
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     While "Exchange of the Spirit" is in your GY, your opponent cannot activate the effects of cards in the GY, or Special Summon monsters from the GY. You can only use each of the following effects of "Gravekeeper's Trap" once per turn. During the Main Phase: You can discard 1 card; add 1 "Gravekeeper's" or EARTH Fairy monster from your Deck to your hand. During your opponent's Draw Phase, before their normal draw, if this card is already face-up on the field: Declare 1 card name; look at the card(s) drawn for their normal draw, and if it was the declared card, send it to the GY.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Solange sich „Austausch des Geistes“ in deinem Friedhof befindet, kann dein Gegner weder die Effekte von Karten im Friedhof aktivieren noch Monster als Spezialbeschwörung vom Friedhof beschwören. Du kannst jeden der folgenden Effekte von „Grabwächters Falle“ nur einmal pro Spielzug verwenden. Während der Main Phase: Du kannst 1 Karte abwerfen; füge deiner Hand 1 „Grabwächter“- oder ERDE Fee-Monster von deinem Deck hinzu. Während der Draw Phase deines Gegners, vor seinem normalen Ziehen, falls diese Karte bereits offen auf dem Spielfeld liegt: Deklariere 1 Kartennamen; sieh dir die Karten an, die er als sein normales Ziehen zieht, und falls es die deklarierte Karte war, lege sie auf den Friedhof.
+  es: |-
+    Mientras "Inversión de Sepulturas" está en tu Cementerio, tu adversario no puede activar los efectos de cartas en el Cementerio, o Invocar de Modo Especial monstruos desde el Cementerio. Sólo puedes usar cada uno de los siguientes efectos de "Trampa del Cuidador de Tumbas" una vez por turno. Durante la Main Phase: puedes descartar 1 carta; añade a tu mano 1 monstruo "Cuidador de Tumbas", o Hada de TIERRA, en tu Deck. Durante la Draw Phase de tu adversario, antes de su robo normal, si esta carta ya está boca arriba en el Campo: declara 1 nombre de carta; mira la o las cartas robadas en su robo normal y, si era la carta declarada, mándala al Cementerio.
+  fr: |-
+    Tant que "Permutation des Mondes" est dans votre Cimetière, votre adversaire ne peut ni activer les effets des cartes dans le Cimetière ni Invoquer Spécialement de monstres depuis le Cimetière. Vous ne pouvez utiliser chacun des effets suivants de "Piège des Protecteurs du Tombeau" qu'une fois par tour. Durant la Main Phase : vous pouvez défausser 1 carte ; ajoutez 1 monstre "Protecteurs du Tombeau" ou TERRE Elfe depuis votre Deck à votre main. Durant la Draw Phase de votre adversaire, avant sa pioche normale, si cette carte est déjà face recto sur le Terrain : déclarez 1 nom de carte ; regardez les cartes piochées pour sa pioche normale, et si c'était la carte déclarée, envoyez-la au Cimetière.
+  it: |-
+    Mentre "Scambio dello Spirito" è nel tuo Cimitero, il tuo avversario non può attivare gli effetti delle carte nel Cimitero, o Evocare Specialmente mostri dal Cimitero. Puoi utilizzare ognuno dei seguenti effetti di "Trappola Custode di Tombe" una sola volta per turno. Durante la Main Phase: puoi scartare 1 carta; aggiungi 1 mostro "Custode di Tombe" o TERRA Fata dal tuo Deck alla tua mano. Durante la Draw Phase del tuo avversario, prima della sua normale pescata, se questa carta è già scoperta sul Terreno: dichiara il nome di 1 carta; guarda le carte pescate per la sua normale pescata e, se c'era la carta dichiarata, mandala al Cimitero.
+  pt: |-
+    Enquanto "Troca de Espírito" estiver no seu Cemitério, seu oponente não pode ativar os efeitos de cards no Cemitério, ou Invocar monstros por Invocação-Especial do Cemitério. Você só pode usar cada um dos seguintes efeitos de "Armadilha do Coveiro" uma vez por turno. Durante a Fase Principal: você pode descartar 1 card; adicione 1 monstro "do Coveiro" ou monstro Fada de TERRA do seu Deck à sua mão. Durante a Fase de Compra do seu oponente, antes da compra normal dele, se este card já estiver com a face para cima no campo: declare 1 nome de card; olhe o(s) card(s) comprado(s) na compra normal dele e, se foi o card declarado, envie-o para o Cemitério.
   ja: |-
     このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：自分の墓地に「現世と冥界の逆転」が存在する限り、相手は墓地のカードの効果を発動できず、墓地のモンスターを特殊召喚できない。②：お互いのメインフェイズに、手札を１枚捨てて発動できる。デッキから「墓守」モンスターまたは天使族・地属性モンスター１体を手札に加える。③：このカードが表側表示で存在する場合、相手ドローフェイズのドロー前に、カード名を１つ宣言して発動する。通常のドローをしたカードを確認し、宣言したカードの場合、墓地へ送る。
   ko: |-
