--- a/data/cards/99937011.yaml
+++ b/data/cards/99937011.yaml
@@ -2,11 +2,11 @@ konami_id: 17604
 password: 99937011
 name:
   en: Mudora the Sword Oracle
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Mudora das Schwertorakel
+  es: Mudora el Oráculo de la Espada
+  fr: Mudora l'Oracle de l'Épée
+  it: Mudora l'Oracolo Spada
+  pt: Mudora, o Oráculo da Espada
   ja: <ruby>剣<rt>けん</rt></ruby><ruby>神<rt>しん</rt></ruby><ruby>官<rt>かん</rt></ruby>ムドラ
   ja_romaji: Kenshinkan Mudora
   ko: 검신관 무도라
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     You can discard 1 other EARTH Fairy monster; Special Summon this card from your hand, then you can place 1 "Gravekeeper's Trap" from your Deck face-up in your Spell & Trap Zone. (Quick Effect): You can banish this card from your field or GY, then target up to 3 cards in any GY(s), or up to 5 if "Exchange of the Spirit" is on your field or in your GY; shuffle them into the Deck. You can only use each effect of "Mudora the Sword Oracle" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Du kannst 1 anderes ERDE Fee-Monster abwerfen; beschwöre diese Karte als Spezialbeschwörung von deiner Hand, dann kannst du 1 „Grabwächters Falle“ von deinem Deck offen in deine Zauber- & Fallenzone legen. (Schnelleffekt): Du kannst diese Karte von deiner Spielfeldseite oder deinem Friedhof verbannen und dann bis zu 3 Karten in beliebigen Friedhöfen wählen oder bis zu 5, falls sich „Austausch des Geistes“ auf deiner Spielfeldseite oder in deinem Friedhof befindet; mische sie ins Deck. Du kannst jeden Effekt von „Mudora das Schwertorakel“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Puedes descartar otro monstruo Hada de TIERRA; Invoca esta carta de Modo Especial desde tu mano, y después puedes poner boca arriba en tu Zona de Magia y Trampas 1 "Trampa del Cuidador de Tumbas" en tu Deck. (Efecto Rápido): puedes desterrar esta carta en tu Campo o Cementerio, y después selecciona hasta 3 cartas en cualquier Cementerio, o hasta 5 si "Inversión de Sepulturas" está en tu Campo o en tu Cementerio; barájalas al Deck. Sólo puedes usar cada efecto de "Mudora el Oráculo de la Espada" una vez por turno.
+  fr: |-
+    Vous pouvez défausser 1 autre monstre TERRE Elfe ; Invoquez Spécialement cette carte depuis votre main, puis vous pouvez placer 1 "Piège des Protecteurs du Tombeau" depuis votre Deck face recto dans votre Zone Magie & Piège. (Effet Rapide) : vous pouvez bannir cette carte depuis votre Terrain ou Cimetière, puis ciblez max. 3 cartes dans les Cimetières ou max. 5 si "Permutation des Mondes" est sur votre Terrain ou dans votre Cimetière ; mélangez-les dans le Deck. Vous ne pouvez utiliser chaque effet de "Mudora l'Oracle de l'Épée" qu'une fois par tour.
+  it: |-
+    Puoi scartare 1 altro mostro TERRA Fata; Evoca Specialmente questa carta dalla tua mano, poi puoi mettere 1 "Trappola Custode di Tombe" dal tuo Deck scoperto nella tua Zona Magie & Trappole. (Effetto Rapido): puoi bandire questa carta dal tuo Terreno o Cimitero, poi scegliere come bersaglio fino a 3 carte in uno o più Cimiteri, o fino a 5 se "Scambio dello Spirito" è sul tuo Terreno o nel tuo Cimitero; mischiale nel Deck. Puoi utilizzare ogni effetto di "Mudora l'Oracolo Spada" una sola volta per turno.
+  pt: |-
+    Você pode descartar 1 outro monstro Fada de TERRA; Invoque este card por Invocação-Especial da sua mão e, depois, você pode colocar 1 "Armadilha do Coveiro" do seu Deck com a face para cima na sua Zona de Magias & Armadilhas. (Efeito Rápido): você pode banir este card do seu campo ou Cemitério e, depois, escolha até 3 cards em quaisquer Cemitérios, ou até 5 se "Troca de Espírito" estiver no seu campo ou no seu Cemitério; embaralhe-os no Deck. Você só pode usar cada efeito de "Mudora, o Oráculo da Espada" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：手札から他の天使族・地属性モンスター１体を捨てて発動できる。このカードを手札から特殊召喚する。その後、デッキから「墓守の罠」１枚を選んで自分の魔法＆罠ゾーンに表側表示で置く事ができる。②：自分・相手ターンに、フィールド・墓地のこのカードを除外し、自分・相手の墓地のカードを合計５枚まで対象として発動できる。そのカードをデッキに戻す。自分のフィールド及び墓地に「現世と冥界の逆転」が存在しない場合、この効果の対象は３枚までとなる。
   ko: |-
