--- a/data/cards/09726840.yaml
+++ b/data/cards/09726840.yaml
@@ -2,11 +2,11 @@ konami_id: 17034
 password: 9726840
 name:
   en: Sky Striker Mobilize - Linkage!
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Himmelsjäger-Mobilisierung - Verbindung!
+  es: Caza del Cielo Movilizar - ¡Unión!
+  fr: Assaut de l'Air - Mobilisation - Connexion !
+  it: Assaltatrice del Cielo Mobilitazione - Collegamento!
+  pt: Força Celeste - Mobilizar - Conexão!
   ja: <ruby>閃<rt>せん</rt></ruby><ruby>刀<rt>とう</rt></ruby><ruby>起<rt>き</rt></ruby><ruby>動<rt>どう</rt></ruby>－リンケージ
   ja_romaji: Sentōkidō - Rinkēji
   ko: 섬도기동－링케이지
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     If you control no monsters in your Main Monster Zone: You cannot Special Summon monsters from the Extra Deck for the rest of this turn after this card resolves, except "Sky Striker Ace" monsters, also send 1 other card you control to the GY, and if you do, Special Summon 1 "Sky Striker Ace" monster from your Extra Deck to the Extra Monster Zone, and if you have at least 1 LIGHT and 1 DARK "Sky Striker Ace" monsters on your field and/or in your GY, the Summoned monster gains 1000 ATK.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls du keine Monster in deiner Main-Monsterzone kontrollierst: Du kannst für den Rest dieses Spielzugs, nachdem diese Karte aufgelöst wurde, keine Monster als Spezialbeschwörung vom Extra Deck beschwören, außer „Himmelsjäger-Ass“-Monstern, zusätzlich lege 1 andere Karte, die du kontrollierst, auf den Friedhof und falls du dies tust, beschwöre 1 „Himmelsjäger-Ass“-Monster als Spezialbeschwörung von deinem Extra Deck in die Extra-Monsterzone und falls du mindestens 1 LICHT und 1 FINSTERNIS „Himmelsjäger-Ass“-Monster auf deiner Spielfeldseite und/oder in deinem Friedhof hast, erhält das beschworene Monster 1000 ATK.
+  es: |-
+    Si no controlas monstruos en tu Zona de Monstruos Principal: no puedes Invocar monstruos de Modo Especial desde el Deck Extra por el resto de este turno después de que esta carta se resuelva, excepto monstruos "Caza del Cielo As", y además manda al Cementerio otra carta que controles y, si lo haces, Invoca de Modo Especial 1 monstruo "Caza del Cielo As" desde tu Deck Extra a la Zona de Monstruos Extra y, si tienes al menos 1 monstruo "Caza del Cielo As" de LUZ y 1 de OSCURIDAD en tu Campo y/o en tu Cementerio, el monstruo Invocado gana 1000 ATK.
+  fr: |-
+    Si vous ne contrôlez aucun monstre dans votre Zone Monstre Main : vous ne pouvez pas Invoquer Spécialement de monstres (monstres "Assaut de l'Air - As" exclus) depuis l'Extra Deck le reste de ce tour après la résolution de cette carte, et aussi, envoyez 1 autre carte que vous contrôlez au Cimetière, et si vous le faites, Invoquez Spécialement 1 monstre "Assaut de l'Air - As" depuis votre Extra Deck dans la Zone Monstre Extra, et si vous avez min. 1 monstre LUMIÈRE "Assaut de l'Air - As" et min. 1 monstre TÉNÈBRES "Assaut de l'Air - As" sur votre Terrain et/ou dans votre Cimetière, le monstre Invoqué gagne 1000 ATK.
+  it: |-
+    Se non controlli nessun mostro nella tua Zona Mostri Main: non puoi Evocare Specialmente mostri dall'Extra Deck per il resto di questo turno dopo che questa carta si è risolta, eccetto mostri "Assaltatrice del Cielo Asso", inoltre manda 1 altra carta che controlli al Cimitero e, se lo fai, Evoca Specialmente 1 mostro "Assaltatrice del Cielo Asso" dal tuo Extra Deck nella Zona Mostri Extra e, se hai almeno 1 mostro "Assaltatrice del Cielo Asso" LUCE e 1 OSCURITÀ sul tuo Terreno e/o nel tuo Cimitero, il mostro Evocato guadagna 1000 ATK.
+  pt: |-
+    Se você não controlar nenhum monstro na sua Zona de Monstros Principal: você não pode Invocar monstros por Invocação-Especial do Deck Adicional pelo resto deste turno depois que este card resolver, exceto monstros "Força Celeste - Ás" e, além disso, envie 1 outro card que você controla para o Cemitério e, se isso acontecer, Invoque por Invocação-Especial na Zona de Monstros Adicional, 1 monstro "Força Celeste - Ás" do seu Deck Adicional e, se você tiver pelo menos 1 monstro "Força Celeste - Ás" de LUZ e 1 de TREVAS no seu campo e/ou no seu Cemitério, o monstro Invocado ganha 1000 de ATK.
   ja: |-
     ①：自分のメインモンスターゾーンにモンスターが存在しない場合に発動できる。このカード以外の自分フィールドのカード１枚を選んで墓地へ送り、ＥＸデッキから「閃刀姫」モンスター１体をＥＸモンスターゾーンに特殊召喚する。自分のフィールド・墓地に、光属性と闇属性の「閃刀姫」モンスターがそれぞれ１体以上存在する場合、この効果で特殊召喚したモンスターの攻撃力は１０００アップする。このカードの発動後、ターン終了時まで自分は「閃刀姫」モンスターしかＥＸデッキから特殊召喚できない。
   ko: |-
