--- a/data/cards/35098357.yaml
+++ b/data/cards/35098357.yaml
@@ -2,11 +2,11 @@ konami_id: 17038
 password: 35098357
 name:
   en: Witchcrafter Confusion Confession
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Hexwerker-Konfusionsbeichte
+  es: Confesión Confusión Artibruja
+  fr: Confession de Confusion Artisanesorcière
+  it: Confessione Confusione Stregartigiana
+  pt: Confessar Confusão Fazticeira
   ja: ウィッチクラフト・コンフュージョン
   ja_romaji: Wicchikurafuto Konfyūjon
   ko: 위치크래프트 컨퓨전
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Fusion Summon 1 Fusion Monster from your Extra Deck, using monsters from your hand or field as material, including a "Witchcrafter" monster. During your End Phase, if you control a "Witchcrafter" monster while this card is in your GY: You can add this card to your hand. You can only use 1 "Witchcrafter Confusion Confession" effect per turn, and only once that turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Beschwöre 1 Fusionsmonster als Fusionsbeschwörung von deinem Extra Deck und verwende dafür Monster von deiner Hand oder Spielfeldseite als Material, darunter ein „Hexwerker“-Monster. Während deiner End Phase, falls du ein „Hexwerker“-Monster kontrollierst, solange sich diese Karte in deinem Friedhof befindet: Du kannst diese Karte deiner Hand hinzufügen. Du kannst nur 1 Effekt von „Hexwerker-Konfusionsbeichte“ pro Spielzug verwenden und in jenem Spielzug nur einmal.
+  es: |-
+    Invoca por Fusión 1 Monstruo de Fusión desde tu Deck Extra, usando monstruos en tu mano o Campo como material, incluyendo un monstruo "Artibruja". Durante tu End Phase, si controlas un monstruo "Artibruja" mientras esta carta está en tu Cementerio: puedes añadir esta carta a tu mano. Sólo puedes usar 1 efecto de "Confesión Confusión Artibruja" por turno, y sólo una vez ese turno.
+  fr: |-
+    Invoquez par Fusion 1 Monstre Fusion depuis votre Extra Deck, en utilisant des monstres depuis votre main ou Terrain comme Matériel (un monstre "Artisanesorcière" inclus). Durant votre End Phase, si vous contrôlez un monstre "Artisanesorcière" tant que cette carte est dans votre Cimetière : vous pouvez ajouter cette carte à votre main. Vous ne pouvez utiliser qu'1 effet de "Confession de Confusion Artisanesorcière" par tour, et uniquement une fois le tour.
+  it: |-
+    Evoca tramite Fusione 1 Mostro Fusione dal tuo Extra Deck, utilizzando mostri dalla tua mano o Terreno come materiale, compreso un mostro "Stregartigiana". Durante la tua End Phase, se controlli un mostro "Stregartigiana" mentre questa carta è nel tuo Cimitero: puoi aggiungere questa carta alla tua mano. Puoi utilizzare solo 1 effetto di "Confessione Confusione Stregartigiana" per turno, e solo una volta in quel turno.
+  pt: |-
+    Invoque por Invocação-Fusão 1 Monstro de Fusão do seu Deck Adicional, usando monstros da sua mão ou do campo como matéria, incluindo um monstro "Fazticeira". Durante sua Fase Final, se você controlar um monstro "Fazticeira", enquanto este card estiver no seu Cemitério: você pode adicionar este card à sua mão. Você só pode usar 1 efeito de "Confessar Confusão Fazticeira" por turno e apenas uma vez por turno.
   ja: |-
     このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：自分の手札・フィールドから、融合モンスターカードによって決められた、「ウィッチクラフト」モンスターを含む融合素材モンスターを墓地へ送り、その融合モンスター１体をＥＸデッキから融合召喚する。②：このカードが墓地に存在し、自分フィールドに「ウィッチクラフト」モンスターが存在する場合、自分エンドフェイズに発動できる。このカードを手札に加える。
   ko: |-
