--- a/data/cards/36114945.yaml
+++ b/data/cards/36114945.yaml
@@ -2,11 +2,11 @@ konami_id: 17035
 password: 36114945
 name:
   en: Yuki-Onna, the Icicle Mayakashi
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Yuki-Onna, die Eiszapfen-Mayakashi
+  es: Yuki-Onna, el Mayakashi Carámbano
+  fr: Yuki-Onna, Mayakashi de la Stalactite
+  it: Yuki-Onna, la Mayakashi Ghiacciolo
+  pt: Yuki-Onna, a Mayakashi Sincelo
   ja: <ruby>垂<rt>たる</rt></ruby><ruby>氷<rt>ひ</rt></ruby>の<ruby>魔妖<rt>まやかし</rt></ruby>－<ruby>雪<rt>ゆき</rt></ruby><ruby>女<rt>おんな</rt></ruby>
   ja_romaji: Taruhi no Mayakashi - Yukionna
   ko: 수빙 마요괴－설녀
@@ -17,11 +17,21 @@ text:
   en: |-
     2+ Zombie monsters
     You can only control 1 "Yuki-Onna, the Icicle Mayakashi". You can only use each of the following effects of "Yuki-Onna, the Icicle Mayakashi" once per turn. If this card is Special Summoned: You can target 1 Effect Monster your opponent controls; negate its effects. (Quick Effect): You can banish this card from your GY; Special Summon 1 of your Zombie Synchro Monsters that is banished or in your GY.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    2+ Zombie-Monster
+    Du kannst nur 1 „Yuki-Onna, die Eiszapfen-Mayakashi“ kontrollieren. Du kannst jeden der folgenden Effekte von „Yuki-Onna, die Eiszapfen-Mayakashi“ nur einmal pro Spielzug verwenden. Falls diese Karte als Spezialbeschwörung beschworen wird: Du kannst 1 Effektmonster wählen, das dein Gegner kontrolliert; annulliere seine Effekte. (Schnelleffekt): Du kannst diese Karte von deinem Friedhof verbannen; beschwöre 1 deiner Zombie-Synchromonster, das verbannt ist oder sich in deinem Friedhof befindet, als Spezialbeschwörung.
+  es: |-
+    2+ monstruos Zombi
+    Sólo puedes controlar 1 "Yuki-Onna, el Mayakashi Carámbano". Sólo puedes usar cada uno de los siguientes efectos de "Yuki-Onna, el Mayakashi Carámbano" una vez por turno. Si esta carta es Invocada de Modo Especial: puedes seleccionar 1 Monstruo de Efecto que controle tu adversario; niega sus efectos. (Efecto Rápido): puedes desterrar esta carta en tu Cementerio; Invoca de Modo Especial 1 de tus Monstruos de Sincronía Zombi que esté desterrado o en tu Cementerio.
+  fr: |-
+    2+ monstres Zombie
+    Vous ne pouvez contrôler qu'1 "Yuki-Onna, Mayakashi de la Stalactite". Vous ne pouvez utiliser chacun des effets suivants de "Yuki-Onna, Mayakashi de la Stalactite" qu'une fois par tour. Si cette carte est Invoquée Spécialement : vous pouvez cibler 1 Monstre à Effet contrôlé par votre adversaire ; annulez ses effets. (Effet Rapide) : vous pouvez bannir cette carte depuis votre Cimetière ; Invoquez Spécialement 1 de vos Monstres Synchro Zombie qui est banni ou dans votre Cimetière.
+  it: |-
+    2+ mostri Zombie
+    Puoi controllare solo 1 "Yuki-Onna, la Mayakashi Ghiacciolo". Puoi utilizzare ognuno dei seguenti effetti di "Yuki-Onna, la Mayakashi Ghiacciolo" una sola volta per turno. Se questa carta viene Evocata Specialmente: puoi scegliere come bersaglio 1 Mostro con Effetto controllato dal tuo avversario; annulla i suoi effetti. (Effetto Rapido): puoi bandire questa carta dal tuo Cimitero; Evoca Specialmente 1 dei tuoi Mostri Synchro Zombie che è bandito o nel tuo Cimitero.
+  pt: |-
+    2+ monstros Zumbi
+    Você só pode controlar 1 "Yuki-Onna, a Mayakashi Sincelo". Você só pode usar cada um dos seguintes efeitos de "Yuki-Onna, a Mayakashi Sincelo" uma vez por turno. Se este card for Invocado por Invocação-Especial: você pode escolher 1 Monstro de Efeito que seu oponente controla; negue seus efeitos. (Efeito Rápido): você pode banir este card do seu Cemitério; Invoque por Invocação-Especial 1 dos seus Monstros Sincro Zumbi que estiverem banidos ou no seu Cemitério.
   ja: |-
     アンデット族モンスター２体以上
     このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：「垂氷の魔妖－雪女」は自分フィールドに１体しか表側表示で存在できない。②：このカードが特殊召喚に成功した場合、相手フィールドの効果モンスター１体を対象として発動できる。そのモンスターの効果を無効にする。③：墓地のこのカードを除外して発動できる。自分の墓地のモンスター及び除外されている自分のモンスターの中から、アンデット族Ｓモンスター１体を選んで特殊召喚する。この効果は相手ターンでも発動できる。
