--- a/data/cards/51208877.yaml
+++ b/data/cards/51208877.yaml
@@ -2,11 +2,11 @@ konami_id: 17609
 password: 51208877
 name:
   en: Blast Held by Destiny
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Schicksals-Explosion
+  es: Estallido del Destino
+  fr: Contrecoup Destiné
+  it: Destino Esplosivo
+  pt: Explosão Causada pelo Destino
   ja: <ruby>運命<rt>さだめ</rt></ruby>の<ruby>抱<rt>だ</rt></ruby>く<ruby>爆<rt>ばく</rt></ruby><ruby>弾<rt>だん</rt></ruby>
   ja_romaji: Sadame no Daku Bakudan
   ko: 운명이 감춘 폭탄
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     When an opponent's monster declares an attack: Destroy the 1 monster your opponent controls with the highest ATK (your choice, if tied), and if you do, inflict damage to your opponent equal to its original ATK, then if "Exchange of the Spirit" is not in your GY, you take damage equal to the damage they took. If this card is sent from the hand or Deck to the GY: You can target 1 Level 4 EARTH Fairy monster in your GY; add it to your hand. You can only use each effect of "Blast Held by Destiny" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wenn ein Monster eines Gegners einen Angriff deklariert: Zerstöre das 1 Monster mit den höchsten ATK, das dein Gegner kontrolliert (bei Gleichstand bestimmst du), und falls du dies tust, füge deinem Gegner Schaden in Höhe seiner Grund-ATK zu, dann, falls sich „Austausch des Geistes“ nicht in deinem Friedhof befindet, erhältst du Schaden in Höhe des Schadens, den er erhalten hat. Falls diese Karte von der Hand oder dem Deck auf den Friedhof gelegt wird: Du kannst 1 ERDE Fee-Monster der Stufe 4 in deinem Friedhof wählen; füge es deiner Hand hinzu. Du kannst jeden Effekt von „Schicksals-Explosion“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Cuando un monstruo del adversario declara un ataque: destruye el monstruo que controle tu adversario con el ATK más alto (si hay empate, eliges tú) y, si lo haces, inflige daño a tu adversario igual a su ATK original y después, si "Inversión de Sepulturas" no está en tu Cementerio, recibes daño igual al daño que él recibió. Si esta carta es mandada de la mano o Deck al Cementerio: puedes seleccionar 1 monstruo Hada de TIERRA de Nivel 4 en tu Cementerio; añádelo a tu mano. Sólo puedes usar cada efecto de "Estallido del Destino" una vez por turno.
+  fr: |-
+    Lorsqu'un monstre de l'adversaire déclare une attaque : détruisez le monstre contrôlé par votre adversaire avec la plus haute ATK (en cas d'égalité, vous choisissez), et si vous le faites, infligez des dommages à votre adversaire égaux à son ATK d'origine, puis si "Permutation des Mondes" n'est pas dans votre Cimetière, vous recevez des dommages égaux aux dommages qu'il a reçus. Si cette carte est envoyée depuis la main ou Deck au Cimetière : vous pouvez cibler 1 monstre TERRE Elfe de Niveau 4 dans votre Cimetière ; ajoutez-le à votre main. Vous ne pouvez utiliser chaque effet de "Contrecoup Destiné" qu'une fois par tour.
+  it: |-
+    Quando un mostro dell'avversario dichiara un attacco: distruggi 1 mostro controllato dal tuo avversario con l'ATK più alto (in caso di parità, scegli tu) e, se lo fai, infliggi al tuo avversario danno pari al suo ATK originale, poi se "Scambio dello Spirito" non è nel tuo Cimitero, subisci danno pari al danno che ha subito. Se questa carta viene mandata dalla mano o Deck al Cimitero: puoi scegliere come bersaglio 1 mostro TERRA Fata di Livello 4 nel tuo Cimitero; aggiungilo alla tua mano. Puoi utilizzare ogni effetto di "Destino Esplosivo" una sola volta per turno.
+  pt: |-
+    Quando um monstro do oponente declarar um ataque: destrua o 1 monstro que seu oponente controla com o maior ATK (em caso de empate, você seleciona) e, se isso acontecer, cause dano ao seu oponente igual ao ATK original dele e, depois, se "Troca de Espírito" não estiver no seu Cemitério, você sofre dano igual ao dano que ele sofreu. Se este card for enviado da mão ou do Deck para o Cemitério: você pode escolher 1 monstro Fada de TERRA de Nível 4 no seu Cemitério; adicione-o à sua mão. Você só pode usar cada efeito de "Explosão Causada pelo Destino" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：相手モンスターの攻撃宣言時に発動できる。相手フィールドの攻撃力が一番高いモンスター１体を破壊し、その元々の攻撃力分のダメージを相手に与える。自分の墓地に「現世と冥界の逆転」が存在しない場合、さらに自分は相手が受けたダメージと同じ数値分のダメージを受ける。②：このカードが手札・デッキから墓地へ送られた場合、自分の墓地の天使族・地属性・レベル４モンスター１体を対象として発動できる。そのモンスターを手札に加える。
   ko: |-
