--- a/data/cards/62219643.yaml
+++ b/data/cards/62219643.yaml
@@ -2,11 +2,11 @@ konami_id: 17036
 password: 62219643
 name:
   en: Ghost Meets Girl - A Masterful Mayakashi Shiranui Saga
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Geist trifft Mädchen - Eine meisterhafte Mayakashi-Shiranui-Sage
+  es: Fantasma Conoce a Chica - Una Saga Maestra Mayakashi Shiranui
+  fr: Rencontre d'un Fantôme et d'une Fille - Saga Shiranui Mayakashi de la Maîtrise
+  it: Fantasma incontra Ragazza - Una Saga Shiranui il Magistrale Mayakashi
+  pt: Fantasma Encontra Garota - Uma Saga Shiranui de um Mayakashi Habilidoso
   ja: <ruby>逢<rt>おう</rt></ruby><ruby>華<rt>か</rt></ruby><ruby>妖<rt>よう</rt></ruby><ruby>麗<rt>れい</rt></ruby><ruby>譚<rt>たん</rt></ruby>－<ruby>魔妖<rt>まやかし</rt></ruby><ruby>不知火<rt>しらぬい</rt></ruby><ruby>語<rt>がたり</rt></ruby>
   ja_romaji: Ōka Yōreitan - Mayakashi Shiranui-gatari
   ko: 봉화요려담－마요괴시라누이이야기
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Tribute 1 "Mayakashi" or "Shiranui" Synchro or Link Monster; neither player can Special Summon monsters from the hand, Deck, or Extra Deck for the rest of this turn. You can banish this card from your GY, then target 1 of your banished Zombie monsters; return it to the GY. You can only use 1 "Ghost Meets Girl - A Masterful Mayakashi Shiranui Saga" effect per turn, and only once that turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Biete 1 „Mayakashi“- oder „Shiranui“-Synchromonster oder -Linkmonster als Tribut an; kein Spieler kann für den Rest dieses Spielzugs Monster als Spezialbeschwörung von der Hand, dem Deck oder dem Extra Deck beschwören. Du kannst diese Karte von deinem Friedhof verbannen und dann 1 deiner verbannten Zombie-Monster wählen; lege es auf den Friedhof zurück. Du kannst nur 1 Effekt von „Geist trifft Mädchen - Eine meisterhafte Mayakashi-Shiranui-Sage“ pro Spielzug verwenden und in jenem Spielzug nur einmal.
+  es: |-
+    Sacrifica 1 Monstruo de Sincronía o Enlace "Mayakashi" o "Shiranui"; ningún jugador puede Invocar monstruos de Modo Especial desde la mano, Deck o Deck Extra por el resto de este turno. Puedes desterrar esta carta en tu Cementerio, y después selecciona 1 de tus monstruos Zombi desterrados; devuélvelo al Cementerio. Sólo puedes usar 1 efecto de "Fantasma Conoce a Chica - Una Saga Maestra Mayakashi Shiranui" por turno, y sólo una vez ese turno.
+  fr: |-
+    Sacrifiez 1 Monstre Synchro ou Lien "Mayakashi" ou "Shiranui" ; le reste de ce tour, aucun joueur ne peut Invoquer Spécialement de monstres depuis la main, Deck ou Extra Deck. Vous pouvez bannir cette carte depuis votre Cimetière, puis ciblez 1 de vos monstres Zombie bannis ; renvoyez-le au Cimetière. Vous ne pouvez utiliser qu'1 effet de "Rencontre d'un Fantôme et d'une Fille - Saga Shiranui Mayakashi de la Maîtrise" par tour, et uniquement une fois le tour.
+  it: |-
+    Offri come Tributo 1 Mostro Synchro o Link "Mayakashi" o "Shiranui"; nessun giocatore può Evocare Specialmente mostri dalla mano, Deck o Extra Deck per il resto di questo turno. Puoi bandire questa carta dal tuo Cimitero, poi scegliere come bersaglio 1 dei tuoi mostri Zombie banditi; fallo ritornare nel Cimitero. Puoi utilizzare solo 1 effetto di "Fantasma incontra Ragazza - Una Saga Shiranui il Magistrale Mayakashi" per turno, e solo una volta in quel turno.
+  pt: |-
+    Ofereça como Tributo 1 Monstro Sincro ou Link "Mayakashi" ou "Shiranui"; nenhum duelista pode Invocar monstros por Invocação-Especial da mão, do Deck ou do Deck Adicional pelo resto deste turno. Você pode banir este card do seu Cemitério e, depois, escolha 1 dos seus monstros Zumbi banidos; devolva-o para o Cemitério. Você só pode usar 1 efeito de "Fantasma Encontra Garota - Uma Saga Shiranui de um Mayakashi Habilidoso" por turno e apenas uma vez por turno.
   ja: |-
     このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：自分フィールドの、「魔妖」Ｓ・リンクモンスターまたは「不知火」Ｓ・リンクモンスター１体をリリースして発動できる。このターン、お互いに手札・デッキ・ＥＸデッキからモンスターを特殊召喚できない。②：墓地のこのカードを除外し、除外されている自分のアンデット族モンスター１体を対象として発動できる。そのモンスターを墓地に戻す。
   ko: |-
