--- a/data/cards/66976526.yaml
+++ b/data/cards/66976526.yaml
@@ -12,7 +12,7 @@ name:
   ko: 자동기계대장군 무령노
   ko_rr:
   zh-TW:
-  zh-CN: 机巧大将军 无零怒
+  zh-CN: 机偶大将军 无零怒
 text:
   en: |-
     1 Tuner + 1 or more non-Tuner Machine-Type monsters
@@ -40,8 +40,8 @@ text:
     이 카드가 싱크로 소환에 성공했을 때, 자신의 덱에서 "자동기계"라는 이름이 붙은 몬스터 1장을 특수 소환할 수 있다. 1턴에 1번, 자신 필드 위에 앞면 표시로 존재하는 "자동기계"라는 이름이 붙은 몬스터의 표시 형식이 변경되었을 때, 자신의 덱에서 카드를 1장 드로우한다.
   zh-TW:
   zh-CN: |-
-    调整+调整以外的机械族怪兽1只以上
-    ①：这张卡同调召唤成功时才能发动。从卡组把1只「机巧」怪兽特殊召唤。②：1回合1次，自己场上的表侧表示的「机巧」怪兽的表示形式变更的场合发动。自己从卡组抽1张。
+    协调＋1只以上协调以外的机械族怪兽
+    ①：此卡同步召唤成功时可以发动。从牌组将1只"机偶"怪兽特殊召唤。②：1回合1次，在自己场上表侧表示"机偶"怪兽的表示形式被变更的情况下发动。自己从牌组抽1张。
 card_type: Monster
 monster_type_line: Machine / Synchro / Effect
 attribute: EARTH
@@ -113,6 +113,11 @@ sets:
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  zh-CN:
+  - set_number: CL02-SC110
+    set_name: Classic Pack 02
+    rarities:
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
