--- a/data/cards/69015963.yaml
+++ b/data/cards/69015963.yaml
@@ -12,7 +12,7 @@ name:
   ko: 데블 프랑켄
   ko_rr:
   zh-TW:
-  zh-CN: 恶魔科学怪人
+  zh-CN: 魔鬼弗兰肯
 text:
   en: |-
     (This card is not treated as a "Cyber" card.)
@@ -37,7 +37,7 @@ text:
     ①: 5000 LP를 지불하고 발동할 수 있다. 엑스트라 덱에서 융합 몬스터 1장을 공격 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    ①：支付5000基本分才能发动。从额外卡组把1只融合怪兽攻击表示特殊召唤。
+    ①：支付5000LP可以发动。从额外牌组将1只融合怪兽以攻击表示特殊召唤。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: DARK
@@ -164,6 +164,11 @@ sets:
     set_name: 20th Anniversary Pack 1st Wave
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: TM01-SC084
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Limited
   ocg: Limited
